:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/af_za.json
+++ b/assets/minecraft/lang/af_za.json
@@ -33,11 +33,11 @@
     "container.grindstone_title": "\u00a77Herstel & Ontgo\u00ebl",
     "container.hopper": "\u00a77Voorwerp Geutbak",
     "container.inventory": "\u00a77Voorraad",
-    "container.lectern": "\u00a77Kateder",
+    "container.lectern": "\u00a77Lessenaar",
     "container.loom": "\u00a77Weefstoel",
     "container.repair": "\u00a77Herstel en Benoem",
     "container.shulkerBox": "\u00a77Shulker boks",
-    "container.smoker": "\u00a77Roker",
+    "container.smoker": "\u00a77Rookoond",
     "container.stonecutter": "\u00a77Klipsnyer",
     "container.upgrade": "\u00a77Opgradeer Toerusting",
     "entity.minecraft.chest_minecart": "\u00a77Koekepan met Kis",
