--- a/assets/minecraft/lang/bar.json
+++ b/assets/minecraft/lang/bar.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schwoaze Shulkerkiste",
-    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulkerkiste",
-    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulkerkiste",
-    "block.minecraft.cyan_shulker_box": "\u00a77T\u00fcrkise Shulkerkiste",
-    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulkerkiste",
-    "block.minecraft.green_shulker_box": "\u00a77Greane Shulkerkiste",
-    "block.minecraft.light_blue_shulker_box": "\u00a77H\u00f6iblaue Shulkerkiste",
-    "block.minecraft.light_gray_shulker_box": "\u00a77H\u00f6igraue Shulkerkiste",
-    "block.minecraft.lime_shulker_box": "\u00a77Giftgreane Shulkerkiste",
-    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulkertruhe",
-    "block.minecraft.orange_shulker_box": "\u00a77Orange Shulkerkiste",
-    "block.minecraft.pink_shulker_box": "\u00a77Rosa Shulkerkiste",
-    "block.minecraft.purple_shulker_box": "\u00a77Violette Shulkerkiste",
-    "block.minecraft.red_shulker_box": "\u00a77Roude Shulkerkiste",
-    "block.minecraft.shulker_box": "\u00a77Shulkerkiste",
-    "block.minecraft.white_shulker_box": "\u00a77Wei\u00dfe Shulkerkiste",
-    "block.minecraft.yellow_shulker_box": "\u00a77Gejbe Shulkerkiste",
+    "block.minecraft.black_shulker_box": "\u00a77Schwoaze Shulker-Kiste",
+    "block.minecraft.blue_shulker_box": "\u00a77Blaue Shulker-Kiste",
+    "block.minecraft.brown_shulker_box": "\u00a77Braune Shulker-Kiste",
+    "block.minecraft.cyan_shulker_box": "\u00a77T\u00fcrkise Shulker-Kiste",
+    "block.minecraft.gray_shulker_box": "\u00a77Graue Shulker-Kiste",
+    "block.minecraft.green_shulker_box": "\u00a77Greane Shulker-Kiste",
+    "block.minecraft.light_blue_shulker_box": "\u00a77H\u00f6iblaue Shulker-Kiste",
+    "block.minecraft.light_gray_shulker_box": "\u00a77H\u00f6igraue Shulker-Kiste",
+    "block.minecraft.lime_shulker_box": "\u00a77Giftgreane Shulker-Kiste",
+    "block.minecraft.magenta_shulker_box": "\u00a77Magenta Shulker-Kiste",
+    "block.minecraft.orange_shulker_box": "\u00a77Orange Shulker-Kiste",
+    "block.minecraft.pink_shulker_box": "\u00a77Rosa Shulker-Kiste",
+    "block.minecraft.purple_shulker_box": "\u00a77Violette Shulker-Kiste",
+    "block.minecraft.red_shulker_box": "\u00a77Roude Shulker-Kiste",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Kiste",
+    "block.minecraft.white_shulker_box": "\u00a77Wei\u00dfe Shulker-Kiste",
+    "block.minecraft.yellow_shulker_box": "\u00a77Gejbe Shulker-Kiste",
     "container.barrel": "\u00a77Fassl",
     "container.beacon": "\u00a77Leichtfeia",
     "container.blast_furnace": "\u00a77Schm\u00f6izofn",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lesepuit",
     "container.loom": "\u00a77Webstui",
     "container.repair": "\u00a77Repariern und Nama \u00e4ndan",
-    "container.shulkerBox": "\u00a77Shulkertruhe",
+    "container.shulkerBox": "\u00a77Shulker-Kiste",
     "container.smoker": "\u00a77Reichaofn",
     "container.stonecutter": "\u00a77Stoametz",
     "container.upgrade": "\u00a77Asr\u00fcstung afwertn",
