--- a/assets/minecraft/lang/brb.json
+++ b/assets/minecraft/lang/brb.json
@@ -16,10 +16,10 @@
     "block.minecraft.shulker_box": "\u00a77Shulkerdo\u00e2s",
     "block.minecraft.white_shulker_box": "\u00a77Wiete shulkerdo\u00e2s",
     "block.minecraft.yellow_shulker_box": "\u00a77Gele shulkerdo\u00e2s",
-    "container.barrel": "\u00a77Vat",
+    "container.barrel": "\u00a77Vaote",
     "container.beacon": "\u00a77Baken",
     "container.blast_furnace": "\u00a77Ho\u00e8goove",
-    "container.brewing": "\u00a77Braawstandaord",
+    "container.brewing": "\u00a77Braawstandoard",
     "container.cartography_table": "\u00a77Kartograofietoafel",
     "container.chest": "\u00a77Kiest",
     "container.chestDouble": "\u00a77Groewte kiest",
@@ -37,7 +37,7 @@
     "container.loom": "\u00a77Weefgetouw",
     "container.repair": "\u00a77Repareren en benoeme",
     "container.shulkerBox": "\u00a77Shulkerdo\u00e2s",
-    "container.smoker": "\u00a77Roker",
+    "container.smoker": "\u00a77Raoker",
     "container.stonecutter": "\u00a77Stiensniejer",
     "container.upgrade": "\u00a77Oitrusting upgraden",
     "entity.minecraft.chest_minecart": "\u00a77Mijnkar meej kiest",
@@ -63,19 +63,19 @@
     "entity.minecraft.villager.weaponsmith": "\u00a77Waopesmed",
     "entity.minecraft.wandering_trader": "\u00a77Rondr\u00e8\u00e8zende handelaor",
     "entity.minecraft.zombie_horse": "\u00a77Zombieperd",
-    "gui.advancements": "\u00a7fVooruitgangen",
-    "itemGroup.brewing": "\u00a77Brouwen",
-    "itemGroup.buildingBlocks": "\u00a77Bouwblokken",
+    "gui.advancements": "\u00a7fVeuroitgangen",
+    "itemGroup.brewing": "\u00a77Braawe",
+    "itemGroup.buildingBlocks": "\u00a77Baawblokken",
     "itemGroup.combat": "\u00a77Gevecht",
     "itemGroup.decorations": "\u00a77Decoratieve blokken",
     "itemGroup.food": "\u00a77Voedsel",
-    "itemGroup.hotbar": "\u00a77Opgeslaoge werkballeke",
+    "itemGroup.hotbar": "\u00a77Opgeslaoge weirekballeke",
     "itemGroup.inventory": "\u00a77Inventaris",
-    "itemGroup.materials": "\u00a77Materialen",
+    "itemGroup.materials": "\u00a77Materioale",
     "itemGroup.misc": "\u00a77Diversen",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Zoeken",
-    "itemGroup.tools": "\u00a77Gereedschap",
+    "itemGroup.search": "\u00a77Zuuke",
+    "itemGroup.tools": "\u00a77Get\u00e8\u00f9g",
     "itemGroup.transportation": "\u00a77Vervoer",
     "merchant.level.1": "\u00a77Begienner",
     "merchant.level.2": "\u00a77Lierling",
