--- a/assets/minecraft/lang/da_dk.json
+++ b/assets/minecraft/lang/da_dk.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Overlevelse",
     "itemGroup.materials": "\u00a77Materialer",
     "itemGroup.misc": "\u00a77Diverse",
-    "itemGroup.redstone": "\u00a77R\u00f8dsten",
+    "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77S\u00f8g genstande",
     "itemGroup.tools": "\u00a77V\u00e6rkt\u00f8j",
     "itemGroup.transportation": "\u00a77Transport",
