--- a/assets/minecraft/lang/de_ch.json
+++ b/assets/minecraft/lang/de_ch.json
@@ -24,13 +24,13 @@
     "container.chest": "\u00a77Chiste",
     "container.chestDouble": "\u00a77Grossi Chiste",
     "container.crafting": "\u00a77Handwerk",
-    "container.creative": "\u00a77G\u00e4gest\u00e4nd",
+    "container.creative": "\u00a77Gegest\u00e4nd",
     "container.dispenser": "\u00a77Werfer",
     "container.dropper": "\u00a77Spender",
     "container.enchant": "\u00a77Verzaubere",
     "container.enderchest": "\u00a77Enderchiste",
     "container.furnace": "\u00a77Ofe",
-    "container.grindstone_title": "\u00a77Repariere & entzubere",
+    "container.grindstone_title": "\u00a77Reparatur & Entzaubere",
     "container.hopper": "\u00a77Trichter",
     "container.inventory": "\u00a77Inventar",
     "container.lectern": "\u00a77Lesepult",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Kampf",
     "itemGroup.decorations": "\u00a77Dekoration",
     "itemGroup.food": "\u00a77Nahrig",
-    "itemGroup.hotbar": "\u00a77Gspeicherti Schnellzuegriffsleiste",
+    "itemGroup.hotbar": "\u00a77Gspicherti Schnellzuegriffsleiste",
     "itemGroup.inventory": "\u00a77Inventar",
     "itemGroup.materials": "\u00a77Werkstoff",
     "itemGroup.misc": "\u00a77Verschiedenes",
@@ -81,6 +81,6 @@
     "merchant.level.2": "\u00a77Lehrling",
     "merchant.level.3": "\u00a77Gsell",
     "merchant.level.4": "\u00a77Experte",
-    "merchant.level.5": "\u00a77Meischter",
+    "merchant.level.5": "\u00a77Meister",
     "merchant.trades": "\u00a77Agebot"
 }
