--- a/assets/minecraft/lang/el_gr.json
+++ b/assets/minecraft/lang/el_gr.json
@@ -14,7 +14,7 @@
     "block.minecraft.purple_shulker_box": "\u00a77\u039c\u03bf\u03b2 \u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
     "block.minecraft.red_shulker_box": "\u00a77\u039a\u03cc\u03ba\u03ba\u03b9\u03bd\u03bf \u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
     "block.minecraft.shulker_box": "\u00a77\u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
-    "block.minecraft.white_shulker_box": "\u00a77\u0386\u03c3\u03c0\u03c1\u03bf \u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
+    "block.minecraft.white_shulker_box": "\u00a77\u039b\u03b5\u03c5\u03ba\u03cc \u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
     "block.minecraft.yellow_shulker_box": "\u00a77\u039a\u03af\u03c4\u03c1\u03b9\u03bd\u03bf \u039a\u03bf\u03c5\u03c4\u03af \u03a3\u03ac\u03bb\u03ba\u03b5\u03c1",
     "container.barrel": "\u00a77\u0392\u03b1\u03c1\u03ad\u03bb\u03b9",
     "container.beacon": "\u00a77\u03a6\u03ac\u03c1\u03bf\u03c2",
