--- a/assets/minecraft/lang/en_ud.json
+++ b/assets/minecraft/lang/en_ud.json
@@ -20,7 +20,7 @@
     "container.beacon": "\u00a77uo\u0254\u0250\u01dd\u15fa",
     "container.blast_furnace": "\u00a77\u01dd\u0254\u0250u\u0279n\u2132 \u0287s\u0250\ua781\u15fa",
     "container.brewing": "\u00a77pu\u0250\u0287S \u1d77u\u1d09\u028d\u01dd\u0279\u15fa",
-    "container.cartography_table": "\u00a77\u01ddlq\u0250\u27d8 \u028e\u0265d\u0250\u0279\u1d77o\u0287\u0279\u0250\u0186",
+    "container.cartography_table": "\u00a77\u01dd\ua781q\u0250\u27d8 \u028e\u0265d\u0250\u0279\u1d77o\u0287\u0279\u0250\u0186",
     "container.chest": "\u00a77\u0287s\u01dd\u0265\u0186",
     "container.chestDouble": "\u00a77\u0287s\u01dd\u0265\u0186 \u01dd\u1d77\u0279\u0250\ua780",
     "container.crafting": "\u00a77\u1d77u\u1d09\u0287\u025f\u0250\u0279\u0186",
@@ -45,7 +45,7 @@
     "entity.minecraft.llama": "\u00a77\u0250\u026f\u0250\ua781\ua780",
     "entity.minecraft.mule": "\u00a77\u01dd\ua781nW",
     "entity.minecraft.skeleton_horse": "\u00a77\u01dds\u0279oH uo\u0287\u01dd\ua781\u01dd\u029eS",
-    "entity.minecraft.villager": "\u00a77\u0279\u01dd\u1d77\u0250\ua781\ua781\u1d09\u039b",
+    "entity.minecraft.villager": "\u00a77\u0279\u01dd\u1d77\u0250\ua781\ua781\u1d09\u0245",
     "entity.minecraft.villager.armorer": "\u00a77\u0279\u01dd\u0279no\u026f\u0279\u2c6f",
     "entity.minecraft.villager.butcher": "\u00a77\u0279\u01dd\u0265\u0254\u0287n\u15fa",
     "entity.minecraft.villager.cartographer": "\u00a77\u0279\u01dd\u0265d\u0250\u0279\u1d77o\u0287\u0279\u0250\u0186",
@@ -57,11 +57,11 @@
     "entity.minecraft.villager.librarian": "\u00a77u\u0250\u1d09\u0279\u0250\u0279q\u1d09\ua780",
     "entity.minecraft.villager.mason": "\u00a77uos\u0250W",
     "entity.minecraft.villager.nitwit": "\u00a77\u0287\u1d09\u028d\u0287\u1d09N",
-    "entity.minecraft.villager.none": "\u00a77\u0279\u01dd\u1d77\u0250\ua781\ua781\u1d09\u039b",
+    "entity.minecraft.villager.none": "\u00a77\u0279\u01dd\u1d77\u0250\ua781\ua781\u1d09\u0245",
     "entity.minecraft.villager.shepherd": "\u00a77p\u0279\u01dd\u0265d\u01dd\u0265S",
     "entity.minecraft.villager.toolsmith": "\u00a77\u0265\u0287\u1d09\u026fs\ua781oo\u27d8",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u0265\u0287\u1d09\u026fsuod\u0250\u01ddM",
-    "entity.minecraft.wandering_trader": "\u00a77\u0279\u01ddp\u0250\u0279\u0287 bu\u0131\u0279\u01ddpu\u0250M",
+    "entity.minecraft.wandering_trader": "\u00a77\u0279\u01ddp\u0250\u0279\u27d8 \u1d77u\u1d09\u0279\u01ddpu\u0250M",
     "entity.minecraft.zombie_horse": "\u00a77\u01dds\u0279oH \u01dd\u1d09q\u026foZ",
     "gui.advancements": "\u00a7fs\u0287u\u01dd\u026f\u01dd\u0254u\u0250\u028cp\u2c6f",
     "itemGroup.brewing": "\u00a77\u1d77u\u1d09\u028d\u01dd\u0279\u15fa",
@@ -70,11 +70,11 @@
     "itemGroup.decorations": "\u00a77s\u029e\u0254o\ua781\u15fa uo\u1d09\u0287\u0250\u0279o\u0254\u01dd\u15e1",
     "itemGroup.food": "\u00a77s\u025f\u025fn\u0287spoo\u2132",
     "itemGroup.hotbar": "\u00a77s\u0279\u0250q\u0287oH p\u01dd\u028c\u0250S",
-    "itemGroup.inventory": "\u00a77\u028e\u0279o\u0287u\u01dd\u028cuI \ua781\u0250\u028c\u1d09\u028c\u0279nS",
+    "itemGroup.inventory": "\u00a77\u028e\u0279o\u0287u\u01dd\u028cuI",
     "itemGroup.materials": "\u00a77s\ua781\u0250\u1d09\u0279\u01dd\u0287\u0250W",
     "itemGroup.misc": "\u00a77sno\u01ddu\u0250\ua781\ua781\u01dd\u0254s\u1d09W",
     "itemGroup.redstone": "\u00a77\u01dduo\u0287sp\u01dd\u1d1a",
-    "itemGroup.search": "\u00a77s\u026f\u01dd\u0287I \u0265\u0254\u0279\u0250\u01ddS",
+    "itemGroup.search": "\u00a77\u0265\u0254\u0279\u0250\u01ddS",
     "itemGroup.tools": "\u00a77s\ua781oo\u27d8",
     "itemGroup.transportation": "\u00a77uo\u1d09\u0287\u0250\u0287\u0279odsu\u0250\u0279\u27d8",
     "merchant.level.1": "\u00a77\u01dd\u0254\u1d09\u028coN",
