--- a/assets/minecraft/lang/eo_uy.json
+++ b/assets/minecraft/lang/eo_uy.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Nigra skatolo de \u015dulkro",
-    "block.minecraft.blue_shulker_box": "\u00a77Blua skatolo de \u015dulkro",
-    "block.minecraft.brown_shulker_box": "\u00a77Bruna skatolo de \u015dulkro",
-    "block.minecraft.cyan_shulker_box": "\u00a77Turkisa skatolo de \u015dulkro",
-    "block.minecraft.gray_shulker_box": "\u00a77Griza skatolo de \u015dulkro",
-    "block.minecraft.green_shulker_box": "\u00a77Verda skatolo de \u015dulkro",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Helblua skatolo de \u015dulkro",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Helgriza skatolo de \u015dulkro",
-    "block.minecraft.lime_shulker_box": "\u00a77Helverda skatolo de \u015dulkro",
-    "block.minecraft.magenta_shulker_box": "\u00a77Malva skatolo de \u015dulkro",
-    "block.minecraft.orange_shulker_box": "\u00a77Oran\u011dkolora skatolo de \u015dulkro",
-    "block.minecraft.pink_shulker_box": "\u00a77Rozkolora skatolo de \u015dulkro",
-    "block.minecraft.purple_shulker_box": "\u00a77Violkolora skatolo de \u015dulkro",
-    "block.minecraft.red_shulker_box": "\u00a77Ru\u011da skatolo de \u015dulkro",
-    "block.minecraft.shulker_box": "\u00a77Skatolo de \u015dulkro",
-    "block.minecraft.white_shulker_box": "\u00a77Blanka skatolo de \u015dulkro",
-    "block.minecraft.yellow_shulker_box": "\u00a77Flava skatolo de \u015dulkro",
+    "block.minecraft.black_shulker_box": "\u00a77Nigra Shulkerskatolo",
+    "block.minecraft.blue_shulker_box": "\u00a77Blua Shulkerskatolo",
+    "block.minecraft.brown_shulker_box": "\u00a77Bruna Shulkerskatolo",
+    "block.minecraft.cyan_shulker_box": "\u00a77Turkisa Shulkerskatolo",
+    "block.minecraft.gray_shulker_box": "\u00a77Griza Shulkerskatolo",
+    "block.minecraft.green_shulker_box": "\u00a77Verda Shulkerskatolo",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Helblua Shulkerskatolo",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Helgriza Shulkerskatolo",
+    "block.minecraft.lime_shulker_box": "\u00a77Helverda Shulkerskatolo",
+    "block.minecraft.magenta_shulker_box": "\u00a77Malva Shulkerskatolo",
+    "block.minecraft.orange_shulker_box": "\u00a77Oran\u011dkolora Shulkerskatolo",
+    "block.minecraft.pink_shulker_box": "\u00a77Rozkolora Shulkerskatolo",
+    "block.minecraft.purple_shulker_box": "\u00a77Violkolora Shulkerskatolo",
+    "block.minecraft.red_shulker_box": "\u00a77Ru\u011da Shulkerskatolo",
+    "block.minecraft.shulker_box": "\u00a77Shulkerskatolo",
+    "block.minecraft.white_shulker_box": "\u00a77Blanka Shulkerskatolo",
+    "block.minecraft.yellow_shulker_box": "\u00a77Flava Shulkerskatolo",
     "container.barrel": "\u00a77Barelo",
     "container.beacon": "\u00a77Lumstriilo",
     "container.blast_furnace": "\u00a77Altforno",
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77\u0134etilo",
     "container.dropper": "\u00a77Donilo",
     "container.enchant": "\u00a77Sor\u0109ado",
-    "container.enderchest": "\u00a77Finejkofro",
+    "container.enderchest": "\u00a77Enderkofro",
     "container.furnace": "\u00a77Forno",
     "container.grindstone_title": "\u00a77Riparado kaj desor\u0109ado",
     "container.hopper": "\u00a77Funelo",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Libropupitro",
     "container.loom": "\u00a77Teksilo",
     "container.repair": "\u00a77Riparado kaj nomado",
-    "container.shulkerBox": "\u00a77Skatolo de \u015dulkro",
+    "container.shulkerBox": "\u00a77Shulkerskatolo",
     "container.smoker": "\u00a77Fumilo",
     "container.stonecutter": "\u00a77\u015ctontran\u0109ilo",
     "container.upgrade": "\u00a77Plibonigi ekipa\u0135on",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Traviva inventaro",
     "itemGroup.materials": "\u00a77Materialoj",
     "itemGroup.misc": "\u00a77Diversaj",
-    "itemGroup.redstone": "\u00a77Ru\u011dono",
+    "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Ser\u0109i",
     "itemGroup.tools": "\u00a77Iloj",
     "itemGroup.transportation": "\u00a77Transporto",
