--- a/assets/minecraft/lang/es_ar.json
+++ b/assets/minecraft/lang/es_ar.json
@@ -5,7 +5,7 @@
     "block.minecraft.cyan_shulker_box": "\u00a77Caja de shulker cian",
     "block.minecraft.gray_shulker_box": "\u00a77Caja de shulker gris",
     "block.minecraft.green_shulker_box": "\u00a77Caja de shulker verde",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Caja de shulker azul celeste",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Caja de shulker celeste",
     "block.minecraft.light_gray_shulker_box": "\u00a77Caja de shulker gris claro",
     "block.minecraft.lime_shulker_box": "\u00a77Caja de shulker verde lima",
     "block.minecraft.magenta_shulker_box": "\u00a77Caja de shulker magenta",
