--- a/assets/minecraft/lang/es_cl.json
+++ b/assets/minecraft/lang/es_cl.json
@@ -44,7 +44,7 @@
     "entity.minecraft.horse": "\u00a77Caballo",
     "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Mula",
-    "entity.minecraft.skeleton_horse": "\u00a77Caballo esquel\u00e9tico",
+    "entity.minecraft.skeleton_horse": "\u00a77Caballo esqueleto",
     "entity.minecraft.villager": "\u00a77Aldeano",
     "entity.minecraft.villager.armorer": "\u00a77Escudero",
     "entity.minecraft.villager.butcher": "\u00a77Carnicero",
