--- a/assets/minecraft/lang/fr_ca.json
+++ b/assets/minecraft/lang/fr_ca.json
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77Distributeur",
     "container.dropper": "\u00a77Droppeur",
     "container.enchant": "\u00a77Enchanter",
-    "container.enderchest": "\u00a77Coffre de l'End",
+    "container.enderchest": "\u00a77Ender coffre",
     "container.furnace": "\u00a77Four",
     "container.grindstone_title": "\u00a77R\u00e9parer et d\u00e9senchanter",
     "container.hopper": "\u00a77Entonnoir",
