--- a/assets/minecraft/lang/fy_nl.json
+++ b/assets/minecraft/lang/fy_nl.json
@@ -2,7 +2,7 @@
     "block.minecraft.black_shulker_box": "\u00a77Swarte Shulker-doaze",
     "block.minecraft.blue_shulker_box": "\u00a77Blauwe Shulker-doaze",
     "block.minecraft.brown_shulker_box": "\u00a77Brune Shulker-doaze",
-    "block.minecraft.cyan_shulker_box": "\u00a77Syane Shulker-doaze",
+    "block.minecraft.cyan_shulker_box": "\u00a77Turkoaiske Shulker-doaze",
     "block.minecraft.gray_shulker_box": "\u00a77Grize Shulker-doaze",
     "block.minecraft.green_shulker_box": "\u00a77Griene Shulker-doaze",
     "block.minecraft.light_blue_shulker_box": "\u00a77Ljochtblauwe Shulker-doaze",
