--- a/assets/minecraft/lang/hr_hr.json
+++ b/assets/minecraft/lang/hr_hr.json
@@ -27,7 +27,7 @@
     "container.creative": "\u00a77Odabir predmeta",
     "container.dispenser": "\u00a77Strelja\u010d",
     "container.dropper": "\u00a77Izbaciva\u010d",
-    "container.enchant": "\u00a77\u010carobiranje",
+    "container.enchant": "\u00a77\u010caranje",
     "container.enderchest": "\u00a77Ender \u0161krinja",
     "container.furnace": "\u00a77Pe\u0107",
     "container.grindstone_title": "\u00a77Popravak i skidanje \u010darolije",
