--- a/assets/minecraft/lang/is_is.json
+++ b/assets/minecraft/lang/is_is.json
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Bakpoki",
     "itemGroup.materials": "\u00a77Hlutir",
     "itemGroup.misc": "\u00a77\u00ddmislegt",
-    "itemGroup.redstone": "\u00a77Rau\u00f0steinn",
+    "itemGroup.redstone": "\u00a77Ro\u00f0steinn",
     "itemGroup.search": "\u00a77Leita a\u00f0 hlutum",
     "itemGroup.tools": "\u00a77Verkf\u00e6ri",
     "itemGroup.transportation": "\u00a77Samg\u00f6ngur",
