--- a/assets/minecraft/lang/jbo_en.json
+++ b/assets/minecraft/lang/jbo_en.json
@@ -72,7 +72,7 @@
     "itemGroup.inventory": "\u00a77renvi sorcu",
     "itemGroup.materials": "\u00a77pagbu",
     "itemGroup.misc": "\u00a77vrici",
-    "itemGroup.redstone": "\u00a77me la redston.",
+    "itemGroup.redstone": "\u00a77xunyrok",
     "itemGroup.search": "\u00a77sisku",
     "itemGroup.tools": "\u00a77tutci",
     "itemGroup.transportation": "\u00a77marce",
