--- a/assets/minecraft/lang/ksh.json
+++ b/assets/minecraft/lang/ksh.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Schwatz Shulkerke\u00df",
-    "block.minecraft.blue_shulker_box": "\u00a77Blau Shulkerke\u00df",
-    "block.minecraft.brown_shulker_box": "\u00a77Brung Shulkerke\u00df",
-    "block.minecraft.cyan_shulker_box": "\u00a77Blaujr\u00f6n Shulkerke\u00df",
-    "block.minecraft.gray_shulker_box": "\u00a77Jrau Shulkerke\u00df",
-    "block.minecraft.green_shulker_box": "\u00a77Jr\u00f6n Shulkerke\u00df",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulkerke\u00df",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Helljrau Shulkerke\u00df",
-    "block.minecraft.lime_shulker_box": "\u00a77Helljr\u00f6n Shulkerke\u00df",
-    "block.minecraft.magenta_shulker_box": "\u00a77Majenta Shulkerke\u00df",
-    "block.minecraft.orange_shulker_box": "\u00a77Orangsch Shulkerke\u00df",
-    "block.minecraft.pink_shulker_box": "\u00a77Rusa Shulkerke\u00df",
-    "block.minecraft.purple_shulker_box": "\u00a77Vijelette Shulkerke\u00df",
-    "block.minecraft.red_shulker_box": "\u00a77Rut Shulkerke\u00df",
-    "block.minecraft.shulker_box": "\u00a77Shulkerke\u00df",
-    "block.minecraft.white_shulker_box": "\u00a77Wie\u00dfe Shulkerke\u00df",
-    "block.minecraft.yellow_shulker_box": "\u00a77J\u00e4l Shulkerke\u00df",
+    "block.minecraft.black_shulker_box": "\u00a77Schwatz Shulker-Ke\u00df",
+    "block.minecraft.blue_shulker_box": "\u00a77Blau Shulker-Ke\u00df",
+    "block.minecraft.brown_shulker_box": "\u00a77Brung Shulker-Ke\u00df",
+    "block.minecraft.cyan_shulker_box": "\u00a77Blaujr\u00f6n Shulker-Ke\u00df",
+    "block.minecraft.gray_shulker_box": "\u00a77Jrau Shulker-Ke\u00df",
+    "block.minecraft.green_shulker_box": "\u00a77Jr\u00f6n Shulker-Ke\u00df",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Hellblaue Shulker-Ke\u00df",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Helljrau Shulker-Ke\u00df",
+    "block.minecraft.lime_shulker_box": "\u00a77Helljr\u00f6n Shulker-Ke\u00df",
+    "block.minecraft.magenta_shulker_box": "\u00a77Majenta Shulker-Ke\u00df",
+    "block.minecraft.orange_shulker_box": "\u00a77Orangsch Shulker-Ke\u00df",
+    "block.minecraft.pink_shulker_box": "\u00a77Rusa Shulker-Ke\u00df",
+    "block.minecraft.purple_shulker_box": "\u00a77Vijelette Shulker-Ke\u00df",
+    "block.minecraft.red_shulker_box": "\u00a77Rut Shulker-Ke\u00df",
+    "block.minecraft.shulker_box": "\u00a77Shulker-Ke\u00df",
+    "block.minecraft.white_shulker_box": "\u00a77Wie\u00dfe Shulker-Ke\u00df",
+    "block.minecraft.yellow_shulker_box": "\u00a77J\u00e4l Shulker-Ke\u00df",
     "container.barrel": "\u00a77Faa\u00df",
     "container.beacon": "\u00a77L\u00f6\u00f6chf\u00f6r",
     "container.blast_furnace": "\u00a77Schmelzovve",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lesepult",
     "container.loom": "\u00a77Wevstohl",
     "container.repair": "\u00a77Ambo\u00df",
-    "container.shulkerBox": "\u00a77Shulkerke\u00df",
+    "container.shulkerBox": "\u00a77Shulker-Ke\u00df",
     "container.smoker": "\u00a77R\u00e4ucherovve",
     "container.stonecutter": "\u00a77Steins\u00e4ch",
     "container.upgrade": "\u00a77Usr\u00f6stung opw\u00e4\u00e4de",
