--- a/assets/minecraft/lang/kw_gb.json
+++ b/assets/minecraft/lang/kw_gb.json
@@ -48,7 +48,7 @@
     "entity.minecraft.villager": "\u00a77Trevesik",
     "entity.minecraft.villager.armorer": "\u00a77Arvwisker",
     "entity.minecraft.villager.butcher": "\u00a77Kiger",
-    "entity.minecraft.villager.cartographer": "\u00a77Den Mappa",
+    "entity.minecraft.villager.cartographer": "\u00a77Mappwas",
     "entity.minecraft.villager.cleric": "\u00a77Klorek",
     "entity.minecraft.villager.farmer": "\u00a77Tiek",
     "entity.minecraft.villager.fisherman": "\u00a77Pyskador",
