--- a/assets/minecraft/lang/li_li.json
+++ b/assets/minecraft/lang/li_li.json
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lessenaar",
     "container.loom": "\u00a77Weefgetouw",
     "container.repair": "\u00a77Aambeeld",
-    "container.shulkerBox": "\u00a77Shulkerdoes",
+    "container.shulkerBox": "\u00a77Shulkerdoeas",
     "container.smoker": "\u00a77Rouker",
     "container.stonecutter": "\u00a77Steinzaag",
     "container.upgrade": "\u00a77Upgrade oetrusting",
