--- a/assets/minecraft/lang/lzh.json
+++ b/assets/minecraft/lang/lzh.json
@@ -53,7 +53,7 @@
     "entity.minecraft.villager.farmer": "\u00a77\u8fb2",
     "entity.minecraft.villager.fisherman": "\u00a77\u6f01\u592b",
     "entity.minecraft.villager.fletcher": "\u00a77\u7bad\u5320",
-    "entity.minecraft.villager.leatherworker": "\u00a77\u76ae\u5320",
+    "entity.minecraft.villager.leatherworker": "\u00a77\u97cb\u4eba",
     "entity.minecraft.villager.librarian": "\u00a77\u5b78\u58eb",
     "entity.minecraft.villager.mason": "\u00a77\u77f3\u5320",
     "entity.minecraft.villager.nitwit": "\u00a77\u611a\u8005",
