--- a/assets/minecraft/lang/ms_my.json
+++ b/assets/minecraft/lang/ms_my.json
@@ -16,7 +16,7 @@
     "block.minecraft.shulker_box": "\u00a77Kotak Shulker",
     "block.minecraft.white_shulker_box": "\u00a77Kotak Shulker Putih",
     "block.minecraft.yellow_shulker_box": "\u00a77Kotak Shulker Kuning",
-    "container.barrel": "\u00a77Tong",
+    "container.barrel": "\u00a77Tahang",
     "container.beacon": "\u00a77Suar",
     "container.blast_furnace": "\u00a77Relau Bagas",
     "container.brewing": "\u00a77Tapak Membru",
@@ -33,7 +33,7 @@
     "container.grindstone_title": "\u00a77Baiki & Nyahsihir",
     "container.hopper": "\u00a77Corong Tuang Item",
     "container.inventory": "\u00a77Inventori",
-    "container.lectern": "\u00a77Mimbar",
+    "container.lectern": "\u00a77Meja Syarahan",
     "container.loom": "\u00a77Alat Tenun",
     "container.repair": "\u00a77Baiki & Namakan",
     "container.shulkerBox": "\u00a77Kotak Shulker",
@@ -46,22 +46,22 @@
     "entity.minecraft.mule": "\u00a77Baghal",
     "entity.minecraft.skeleton_horse": "\u00a77Kuda Kerangka",
     "entity.minecraft.villager": "\u00a77Penduduk Kampung",
-    "entity.minecraft.villager.armorer": "\u00a77Tukang Perisai",
+    "entity.minecraft.villager.armorer": "\u00a77Tukang Zirah",
     "entity.minecraft.villager.butcher": "\u00a77Penjual Daging",
     "entity.minecraft.villager.cartographer": "\u00a77Ahli Kartografi",
-    "entity.minecraft.villager.cleric": "\u00a77Paderi",
+    "entity.minecraft.villager.cleric": "\u00a77Pendeta",
     "entity.minecraft.villager.farmer": "\u00a77Petani",
     "entity.minecraft.villager.fisherman": "\u00a77Nelayan",
-    "entity.minecraft.villager.fletcher": "\u00a77Pemanah",
+    "entity.minecraft.villager.fletcher": "\u00a77Tukang Panah",
     "entity.minecraft.villager.leatherworker": "\u00a77Tukang Jahit",
     "entity.minecraft.villager.librarian": "\u00a77Pustakawan",
     "entity.minecraft.villager.mason": "\u00a77Jurubatu",
-    "entity.minecraft.villager.nitwit": "\u00a77Nitwit",
+    "entity.minecraft.villager.nitwit": "\u00a77Si Jahil",
     "entity.minecraft.villager.none": "\u00a77Penduduk Kampung",
     "entity.minecraft.villager.shepherd": "\u00a77Pengembala",
-    "entity.minecraft.villager.toolsmith": "\u00a77Tukang alat",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Tukang senjata",
-    "entity.minecraft.wandering_trader": "\u00a77Peniaga Berkelana",
+    "entity.minecraft.villager.toolsmith": "\u00a77Tukang Alat",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Tukang Senjata",
+    "entity.minecraft.wandering_trader": "\u00a77Saudagar Berkelana",
     "entity.minecraft.zombie_horse": "\u00a77Zombi Kuda",
     "gui.advancements": "\u00a7fKemajuan",
     "itemGroup.brewing": "\u00a77Pembruan",
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Pertempuran",
     "itemGroup.decorations": "\u00a77Blok-Blok Perhiasan",
     "itemGroup.food": "\u00a77Makanan",
-    "itemGroup.hotbar": "\u00a77Susunan Alat Disimpan",
+    "itemGroup.hotbar": "\u00a77Palang Utama Disimpan",
     "itemGroup.inventory": "\u00a77Inventori Kemandirian",
     "itemGroup.materials": "\u00a77Bahan-Bahan",
     "itemGroup.misc": "\u00a77Lain-lain",
