--- a/assets/minecraft/lang/no_no.json
+++ b/assets/minecraft/lang/no_no.json
@@ -19,7 +19,7 @@
     "container.barrel": "\u00a77T\u00f8nne",
     "container.beacon": "\u00a77Varde",
     "container.blast_furnace": "\u00a77Masovn",
-    "container.brewing": "\u00a77Bryggeapparat",
+    "container.brewing": "\u00a77Bryggestativ",
     "container.cartography_table": "\u00a77Kartografibenk",
     "container.chest": "\u00a77Kiste",
     "container.chestDouble": "\u00a77Stor kiste",
