--- a/assets/minecraft/lang/pt_pt.json
+++ b/assets/minecraft/lang/pt_pt.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77Combate",
     "itemGroup.decorations": "\u00a77Blocos decorativos",
     "itemGroup.food": "\u00a77Alimentos",
-    "itemGroup.hotbar": "\u00a77Barras de itens guardadas",
+    "itemGroup.hotbar": "\u00a77Barras r\u00e1pidas guardadas",
     "itemGroup.inventory": "\u00a77Invent\u00e1rio",
     "itemGroup.materials": "\u00a77Materiais",
     "itemGroup.misc": "\u00a77Diversos",
