--- a/assets/minecraft/lang/qya_aa.json
+++ b/assets/minecraft/lang/qya_aa.json
@@ -17,17 +17,23 @@
     "block.minecraft.white_shulker_box": "\u00a77Ninqu\u00eb colca hyulcero",
     "block.minecraft.yellow_shulker_box": "\u00a77Malina colca hyulcero",
     "container.barrel": "\u00a77Corcolca",
+    "container.beacon": "\u00a77Naltama",
     "container.blast_furnace": "\u00a77Ticutait\u00eb urna",
+    "container.brewing": "\u00a77Velma",
+    "container.cartography_table": "\u00a77Paluhta noremmaron",
     "container.chest": "\u00a77Taucolca",
     "container.chestDouble": "\u00a77Hoa taucolca",
     "container.crafting": "\u00a77Tami\u00eb",
     "container.creative": "\u00a77Cili\u00eb nation",
+    "container.dispenser": "\u00a77Estatar",
+    "container.dropper": "\u00a77Tultar",
     "container.enchant": "\u00a77Luhta",
     "container.enderchest": "\u00a77Taucolca Endeva",
     "container.furnace": "\u00a77Urna",
     "container.grindstone_title": "\u00a77Apterya ar \u00faluhta",
     "container.inventory": "\u00a77Auri\u00eb",
     "container.lectern": "\u00a77Parmatarma",
+    "container.loom": "\u00a77Lanwa",
     "container.repair": "\u00a77Envinyata ar esta",
     "container.shulkerBox": "\u00a77Colca hyulcero",
     "container.smoker": "\u00a77Ustyar",
@@ -51,6 +57,7 @@
     "entity.minecraft.villager.shepherd": "\u00a77Emerro",
     "entity.minecraft.villager.toolsmith": "\u00a77Carmatan",
     "entity.minecraft.villager.weaponsmith": "\u00a77Maicatan",
+    "entity.minecraft.wandering_trader": "\u00a77Ranyaila macar",
     "entity.minecraft.zombie_horse": "\u00a77Urcoya rocco",
     "gui.advancements": "\u00a7fEmpatyeller",
     "itemGroup.brewing": "\u00a77Veli\u00eb",
@@ -61,10 +68,11 @@
     "itemGroup.hotbar": "\u00a77Renin\u00eb fert\u00e9mar",
     "itemGroup.inventory": "\u00a77Auri\u00eb",
     "itemGroup.materials": "\u00a77Ermar",
+    "itemGroup.misc": "\u00a77Hyan\u00eb",
     "itemGroup.redstone": "\u00a77Redstone",
-    "itemGroup.search": "\u00a77Saca Nati",
+    "itemGroup.search": "\u00a77Ces\u00eb nati",
     "itemGroup.tools": "\u00a77Tammar",
-    "itemGroup.transportation": "\u00a77Levi\u00eb",
+    "itemGroup.transportation": "\u00a77Lelyar\u00eb",
     "merchant.level.1": "\u00a77Yestamo",
     "merchant.level.2": "\u00a77Parmo",
     "merchant.level.3": "\u00a77M\u00f3tamo",
