--- a/assets/minecraft/lang/se_no.json
+++ b/assets/minecraft/lang/se_no.json
@@ -18,7 +18,7 @@
     "block.minecraft.yellow_shulker_box": "\u00a77Fiskes Shulkerboksa",
     "container.barrel": "\u00a77F\u00e1rppal",
     "container.beacon": "\u00a77V\u00e1rdo\u010duovga",
-    "container.blast_furnace": "\u00a77Goardinovdna",
+    "container.blast_furnace": "\u00a77Goardinuvdna",
     "container.brewing": "\u00a77Vuo\u0161\u0161ahat",
     "container.cartography_table": "\u00a77K\u00e1rtenbeavdi",
     "container.chest": "\u00a77Bumb\u00e1",
@@ -29,7 +29,7 @@
     "container.dropper": "\u00a77Luoitaleaddji",
     "container.enchant": "\u00a77Noido",
     "container.enderchest": "\u00a77Endorbumb\u00e1",
-    "container.furnace": "\u00a77Ovdna",
+    "container.furnace": "\u00a77Uvdna",
     "container.grindstone_title": "\u00a77Divo & sihko noidosa",
     "container.hopper": "\u00a77D\u00e1vvirnjammi",
     "container.inventory": "\u00a77D\u00e1vvirvuork\u00e1",
@@ -61,7 +61,7 @@
     "entity.minecraft.villager.shepherd": "\u00a77Guo\u0111oheaddji",
     "entity.minecraft.villager.toolsmith": "\u00a77Reaidoduojar",
     "entity.minecraft.villager.weaponsmith": "\u00a77Vearjoduojar",
-    "entity.minecraft.wandering_trader": "\u00a77M\u00e1tko\u0161tan vuovdaleaddji",
+    "entity.minecraft.wandering_trader": "\u00a77Johttig\u00e1vppa\u0161eaddji",
     "entity.minecraft.zombie_horse": "\u00a77J\u00e1mesheasta",
     "gui.advancements": "\u00a7fOvd\u00e1neamit",
     "itemGroup.brewing": "\u00a77Vuo\u0161\u0161an",
