--- a/assets/minecraft/lang/tok.json
+++ b/assets/minecraft/lang/tok.json
@@ -1,21 +1,21 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77poki monsuta pimeja",
-    "block.minecraft.blue_shulker_box": "\u00a77poki monsuta pi laso telo",
-    "block.minecraft.brown_shulker_box": "\u00a77poki monsuta pi kule ma",
-    "block.minecraft.cyan_shulker_box": "\u00a77poki monsuta laso",
-    "block.minecraft.gray_shulker_box": "\u00a77poki monsuta pi pimeja walo",
-    "block.minecraft.green_shulker_box": "\u00a77poki monsuta pi laso kasi",
-    "block.minecraft.light_blue_shulker_box": "\u00a77poki monsuta pi laso sewi",
-    "block.minecraft.light_gray_shulker_box": "\u00a77poki monsuta pi walo pimeja",
-    "block.minecraft.lime_shulker_box": "\u00a77poki monsuta pi laso jelo",
-    "block.minecraft.magenta_shulker_box": "\u00a77poki monsuta pi loje laso",
-    "block.minecraft.orange_shulker_box": "\u00a77poki monsuta pi loje jelo",
+    "block.minecraft.black_shulker_box": "\u00a77poki pimeja pi monsuta Shulker",
+    "block.minecraft.blue_shulker_box": "\u00a77poki pi laso telo pi monsuta Shulker",
+    "block.minecraft.brown_shulker_box": "\u00a77poki pi kule ma pi monsuta Shulker",
+    "block.minecraft.cyan_shulker_box": "\u00a77poki laso pi monsuta Shulker",
+    "block.minecraft.gray_shulker_box": "\u00a77poki pi pimeja walo pi monsuta Shulker",
+    "block.minecraft.green_shulker_box": "\u00a77poki pi laso kasi pi monsuta Shulker",
+    "block.minecraft.light_blue_shulker_box": "\u00a77poki pi laso sewi pi monsuta Shulker",
+    "block.minecraft.light_gray_shulker_box": "\u00a77poki pi walo pimeja pi monsuta Shulker",
+    "block.minecraft.lime_shulker_box": "\u00a77poki pi laso jelo pi monsuta Shulker",
+    "block.minecraft.magenta_shulker_box": "\u00a77poki pi loje laso pi monsuta Shulker",
+    "block.minecraft.orange_shulker_box": "\u00a77poki pi loje jelo pi monsuta Shulker",
     "block.minecraft.pink_shulker_box": "\u00a77poki monsuta pi loje walo",
-    "block.minecraft.purple_shulker_box": "\u00a77poki monsuta pi laso loje",
-    "block.minecraft.red_shulker_box": "\u00a77poki monsuta loje",
-    "block.minecraft.shulker_box": "\u00a77poki monsuta",
-    "block.minecraft.white_shulker_box": "\u00a77poki monsuta walo",
-    "block.minecraft.yellow_shulker_box": "\u00a77poki monsuta jelo",
+    "block.minecraft.purple_shulker_box": "\u00a77poki laso loje pi monsuta Shulker",
+    "block.minecraft.red_shulker_box": "\u00a77poki loje pi monsuta Shulker",
+    "block.minecraft.shulker_box": "\u00a77poki pi monsuta Shulker",
+    "block.minecraft.white_shulker_box": "\u00a77poki walo pi monsuta Shulker",
+    "block.minecraft.yellow_shulker_box": "\u00a77poki jelo pi monsuta Shulker",
     "container.barrel": "\u00a77poki sike",
     "container.beacon": "\u00a77ilo wawa",
     "container.blast_furnace": "\u00a77poki pi seli kiwen",
@@ -23,20 +23,20 @@
     "container.cartography_table": "\u00a77supa pi sitelen ma",
     "container.chest": "\u00a77poki",
     "container.chestDouble": "\u00a77poki suli",
-    "container.crafting": "\u00a77o pali",
+    "container.crafting": "\u00a77supa pali",
     "container.creative": "\u00a77o jo e ijo",
     "container.dispenser": "\u00a77poki pi pana wawa",
     "container.dropper": "\u00a77poki pana",
-    "container.enchant": "\u00a77o wawa",
-    "container.enderchest": "\u00a77poki nasa",
+    "container.enchant": "\u00a77supa wawa",
+    "container.enderchest": "\u00a77poki pi ma End",
     "container.furnace": "\u00a77poki seli",
-    "container.grindstone_title": "\u00a77o pona o weka e wawa",
+    "container.grindstone_title": "\u00a77kama pona ilo en weka wawa",
     "container.hopper": "\u00a77poki pi tawa ijo",
     "container.inventory": "\u00a77jo sina",
     "container.lectern": "\u00a77supa lipu",
     "container.loom": "\u00a77ilo len",
     "container.repair": "\u00a77o pona o nimi",
-    "container.shulkerBox": "\u00a77poki monsuta",
+    "container.shulkerBox": "\u00a77poki pi monsuta Shulker",
     "container.smoker": "\u00a77poki pi seli moku",
     "container.stonecutter": "\u00a77sike pi kipisi kiwen",
     "container.upgrade": "\u00a77o sewi e len e ilo",
