--- a/assets/minecraft/lang/ar_sa.json
+++ b/assets/minecraft/lang/ar_sa.json
@@ -26,11 +26,11 @@
     "container.crafting": "\u00a77\u0635\u0646\u0627\u0639\u0629",
     "container.creative": "\u00a77\u0625\u062e\u062a\u064a\u0627\u0631 \u0627\u0644\u063a\u0631\u0636",
     "container.dispenser": "\u00a77\u0642\u0627\u0630\u0641",
-    "container.dropper": "\u00a77\u0627\u0644\u0642\u0637\u0627\u0631\u0629",
+    "container.dropper": "\u00a77\u0642\u0637\u0627\u0631\u0629",
     "container.enchant": "\u00a77\u0627\u0633\u062d\u0631",
     "container.enderchest": "\u00a77\u0635\u0646\u062f\u0648\u0642 \u0627\u0644\u0627\u0646\u062f\u0631",
     "container.furnace": "\u00a77\u0641\u0631\u0646",
-    "container.grindstone_title": "\u00a77\u0625\u0635\u0644\u0627\u062d \u0648 \u0627\u0632\u0627\u0644\u0629 \u0627\u0644\u062a\u0637\u0648\u064a\u0631\u0627\u062a",
+    "container.grindstone_title": "\u00a77\u0625\u0635\u0644\u0627\u062d \u0648 \u0625\u0632\u0627\u0644\u0629 \u0627\u0644\u0633\u062d\u0631",
     "container.hopper": "\u00a77\u0647\u0648\u0628\u0631",
     "container.inventory": "\u00a77\u0627\u0644\u062d\u0642\u064a\u0628\u0629",
     "container.lectern": "\u00a77\u0645\u0646\u0636\u062f\u0629 \u0627\u0644\u0642\u0631\u0627\u0621\u0629",
@@ -41,10 +41,10 @@
     "container.stonecutter": "\u00a77\u0642\u0627\u0637\u0639 \u0627\u0644\u062d\u062c\u0627\u0631\u0629",
     "container.upgrade": "\u00a77\u062a\u0631\u0642\u064a\u0629 \u0627\u0644\u0639\u062a\u0627\u062f",
     "entity.minecraft.chest_minecart": "\u00a77\u0639\u0631\u0628\u0629 \u0645\u0646\u062c\u0645 \u0628\u0635\u0646\u062f\u0648\u0642",
-    "entity.minecraft.horse": "\u00a77\u062e\u064a\u0644",
+    "entity.minecraft.horse": "\u00a77\u062d\u0635\u0627\u0646",
     "entity.minecraft.llama": "\u00a77\u0644\u0627\u0645\u0627",
     "entity.minecraft.mule": "\u00a77\u0628\u063a\u0644",
-    "entity.minecraft.skeleton_horse": "\u00a77\u0627\u0644\u062d\u0635\u0627\u0646 \u0627\u0644\u0639\u0638\u0645\u0649",
+    "entity.minecraft.skeleton_horse": "\u00a77\u062d\u0635\u0627\u0646 \u0639\u0638\u0645\u064a",
     "entity.minecraft.villager": "\u00a77\u0642\u0631\u0648\u064a",
     "entity.minecraft.villager.armorer": "\u00a77\u062d\u062f\u0627\u062f \u0627\u0644\u062f\u0631\u0648\u0639",
     "entity.minecraft.villager.butcher": "\u00a77\u0627\u0644\u062c\u0632\u0627\u0631",
@@ -54,7 +54,7 @@
     "entity.minecraft.villager.fisherman": "\u00a77\u0627\u0644\u0635\u064a\u0627\u062f",
     "entity.minecraft.villager.fletcher": "\u00a77\u0641\u0644\u064a\u062a\u0634\u0631",
     "entity.minecraft.villager.leatherworker": "\u00a77\u0639\u0627\u0645\u0644 \u0627\u0644\u062c\u0644\u0648\u062f",
-    "entity.minecraft.villager.librarian": "\u00a77\u0627\u0645\u064a\u0646 \u0627\u0644\u0645\u0643\u062a\u0628\u0629",
+    "entity.minecraft.villager.librarian": "\u00a77\u0623\u0645\u064a\u0646 \u0627\u0644\u0645\u0643\u062a\u0628\u0629",
     "entity.minecraft.villager.mason": "\u00a77\u0627\u0644\u0639\u0627\u0645\u0644 \u0627\u0644\u0628\u0646\u0627\u0621",
     "entity.minecraft.villager.nitwit": "\u00a77\u0627\u0644\u062c\u0627\u0647\u0644",
     "entity.minecraft.villager.none": "\u00a77\u0642\u0631\u0648\u064a",
@@ -62,21 +62,21 @@
     "entity.minecraft.villager.toolsmith": "\u00a77\u062d\u062f\u0627\u062f\u0629 \u0627\u0644\u0623\u062f\u0648\u0627\u062a",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u062d\u062f\u0627\u062f\u0629 \u0627\u0644\u0623\u0633\u0644\u062d\u0629",
     "entity.minecraft.wandering_trader": "\u00a77\u0628\u0627\u0626\u0639 \u0645\u062a\u062c\u0648\u0644",
-    "entity.minecraft.zombie_horse": "\u00a77\u0627\u0644\u062e\u064a\u0644 \u0627\u0644\u0632\u0648\u0645\u0628\u0649",
+    "entity.minecraft.zombie_horse": "\u00a77\u062d\u0635\u0627\u0646 \u0632\u0648\u0645\u0628\u064a",
     "gui.advancements": "\u00a7f\u0627\u0644\u062a\u0642\u062f\u0645",
     "itemGroup.brewing": "\u00a77\u0627\u0644\u062a\u062e\u0645\u064a\u0631",
     "itemGroup.buildingBlocks": "\u00a77\u0643\u062a\u0644 \u0627\u0644\u0628\u0646\u0627\u0621",
     "itemGroup.combat": "\u00a77\u0642\u062a\u0627\u0644",
     "itemGroup.decorations": "\u00a77\u0643\u062a\u0644 \u0627\u0644\u0632\u064a\u0646\u0629",
-    "itemGroup.food": "\u00a77\u063a\u0630\u0627\u0621",
+    "itemGroup.food": "\u00a77\u0627\u0644\u0623\u0637\u0639\u0645\u0629",
     "itemGroup.hotbar": "\u00a77\u0623\u0634\u0631\u0637\u0629 \u0627\u0644\u0645\u0647\u0627\u0645 \u0627\u0644\u0645\u062d\u0641\u0648\u0638\u0629",
     "itemGroup.inventory": "\u00a77\u062d\u0642\u064a\u0628\u0629 \u0627\u0644\u0628\u0642\u0627\u0621",
     "itemGroup.materials": "\u00a77\u0645\u0648\u0627\u062f",
     "itemGroup.misc": "\u00a77\u0645\u062a\u0646\u0648\u0639\u0627\u062a",
     "itemGroup.redstone": "\u00a77\u0631\u064a\u062f\u0633\u062a\u0648\u0646",
-    "itemGroup.search": "\u00a77\u0623\u063a\u0631\u0627\u0636 \u0627\u0644\u0628\u062d\u062b",
+    "itemGroup.search": "\u00a77\u0627\u0628\u062d\u062b \u0639\u0646 \u0623\u063a\u0631\u0627\u0636",
     "itemGroup.tools": "\u00a77\u0623\u062f\u0648\u0627\u062a",
-    "itemGroup.transportation": "\u00a77\u0648\u0633\u0627\u0626\u0644 \u0627\u0644\u0646\u0642\u0644",
+    "itemGroup.transportation": "\u00a77\u0627\u0644\u062a\u0646\u0642\u0644",
     "merchant.level.1": "\u00a77\u0645\u0628\u062a\u062f\u0626",
     "merchant.level.2": "\u00a77\u0645\u0628\u062a\u062f\u0626",
     "merchant.level.3": "\u00a77\u0628\u0627\u0631\u0639",
