--- a/assets/minecraft/lang/ba_ru.json
+++ b/assets/minecraft/lang/ba_ru.json
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77\u042b\u04ab\u04a1\u0430\u0440\u0493\u044b",
     "container.stonecutter": "\u00a77\u0422\u0430\u0448\u043a\u0438\u04ab\u043a\u0435\u0441",
     "container.upgrade": "\u00a77\u042f\u043f\u0440\u0430\u04a1-\u04a1\u043e\u0440\u0430\u043b\u0434\u044b \u044f\u04a3\u044b\u0440\u0442\u044b\u0443",
-    "entity.minecraft.chest_minecart": "\u00a77\u04ba\u0430\u043d\u0434\u044b\u04a1\u043b\u044b \u0432\u0430\u0433\u043e\u043d\u0435\u0442\u043a\u0430",
+    "entity.minecraft.chest_minecart": "\u00a77\u04ba\u0430\u043d\u0434\u044b\u04a1 \u043c\u0435\u043d\u04d9\u043d \u0432\u0430\u0433\u043e\u043d\u0435\u0442\u043a\u0430",
     "entity.minecraft.horse": "\u00a77\u0410\u0442",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
     "entity.minecraft.mule": "\u00a77\u04a0\u0430\u0441\u044b\u0440",
