--- a/assets/minecraft/lang/enp.json
+++ b/assets/minecraft/lang/enp.json
@@ -1,22 +1,22 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Black Shulker Crate",
-    "block.minecraft.blue_shulker_box": "\u00a77Hewen Shulker Crate",
-    "block.minecraft.brown_shulker_box": "\u00a77Brown Shulker Crate",
-    "block.minecraft.cyan_shulker_box": "\u00a77Hewengreen Shulker Crate",
-    "block.minecraft.gray_shulker_box": "\u00a77Gray Shulker Crate",
-    "block.minecraft.green_shulker_box": "\u00a77Green Shulker Crate",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Light Hewen Shulker Crate",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Light Gray Shulker Crate",
-    "block.minecraft.lime_shulker_box": "\u00a77Light Green Shulker Crate",
-    "block.minecraft.magenta_shulker_box": "\u00a77Bawsered Shulker Crate",
-    "block.minecraft.orange_shulker_box": "\u00a77Yellowred Shulker Crate",
-    "block.minecraft.pink_shulker_box": "\u00a77Pink Shulker Crate",
-    "block.minecraft.purple_shulker_box": "\u00a77Bawse Shulker Crate",
-    "block.minecraft.red_shulker_box": "\u00a77Red Shulker Crate",
-    "block.minecraft.shulker_box": "\u00a77Shulker Crate",
-    "block.minecraft.white_shulker_box": "\u00a77White Shulker Crate",
-    "block.minecraft.yellow_shulker_box": "\u00a77Yellow Shulker Crate",
-    "container.barrel": "\u00a77Coop",
+    "block.minecraft.black_shulker_box": "\u00a77Black Shulker Pack",
+    "block.minecraft.blue_shulker_box": "\u00a77Hewen Shulker Pack",
+    "block.minecraft.brown_shulker_box": "\u00a77Brown Shulker Pack",
+    "block.minecraft.cyan_shulker_box": "\u00a77Hewengreen Shulker Pack",
+    "block.minecraft.gray_shulker_box": "\u00a77Gray Shulker Pack",
+    "block.minecraft.green_shulker_box": "\u00a77Green Shulker Pack",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Light Hewen Shulker Pack",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Light Gray Shulker Pack",
+    "block.minecraft.lime_shulker_box": "\u00a77Light Green Shulker Pack",
+    "block.minecraft.magenta_shulker_box": "\u00a77Bawsered Shulker Pack",
+    "block.minecraft.orange_shulker_box": "\u00a77Yellowred Shulker Pack",
+    "block.minecraft.pink_shulker_box": "\u00a77Pink Shulker Pack",
+    "block.minecraft.purple_shulker_box": "\u00a77Bawse Shulker Pack",
+    "block.minecraft.red_shulker_box": "\u00a77Red Shulker Pack",
+    "block.minecraft.shulker_box": "\u00a77Shulker Pack",
+    "block.minecraft.white_shulker_box": "\u00a77White Shulker Pack",
+    "block.minecraft.yellow_shulker_box": "\u00a77Yellow Shulker Pack",
+    "container.barrel": "\u00a77Vat",
     "container.beacon": "\u00a77Beacon",
     "container.blast_furnace": "\u00a77Blast Oven",
     "container.brewing": "\u00a77Brewing Stand",
@@ -36,14 +36,14 @@
     "container.lectern": "\u00a77Reading Stand",
     "container.loom": "\u00a77Loom",
     "container.repair": "\u00a77Fettle & Name",
-    "container.shulkerBox": "\u00a77Shulker Crate",
+    "container.shulkerBox": "\u00a77Shulker Pack",
     "container.smoker": "\u00a77Smoker",
     "container.stonecutter": "\u00a77Stonecutter",
     "container.upgrade": "\u00a77Better Gear",
-    "entity.minecraft.chest_minecart": "\u00a77Delvewagon with Chest",
+    "entity.minecraft.chest_minecart": "\u00a77Delvewain with Chest",
     "entity.minecraft.horse": "\u00a77Horse",
     "entity.minecraft.llama": "\u00a77Drylandersheep",
-    "entity.minecraft.mule": "\u00a77Mule",
+    "entity.minecraft.mule": "\u00a77Easlehorse",
     "entity.minecraft.skeleton_horse": "\u00a77Boneset Horse",
     "entity.minecraft.villager": "\u00a77Thorpsman",
     "entity.minecraft.villager.armorer": "\u00a77Hirstingsmith",
@@ -82,5 +82,5 @@
     "merchant.level.3": "\u00a77Fareman",
     "merchant.level.4": "\u00a77Cunningman",
     "merchant.level.5": "\u00a77Cunninglord",
-    "merchant.trades": "\u00a77Wrixles"
+    "merchant.trades": "\u00a77Trades"
 }
