--- a/assets/minecraft/lang/es_mx.json
+++ b/assets/minecraft/lang/es_mx.json
@@ -46,7 +46,7 @@
     "entity.minecraft.mule": "\u00a77Mula",
     "entity.minecraft.skeleton_horse": "\u00a77Caballo esquel\u00e9tico",
     "entity.minecraft.villager": "\u00a77Aldeano",
-    "entity.minecraft.villager.armorer": "\u00a77Herrero de armaduras",
+    "entity.minecraft.villager.armorer": "\u00a77Escudero",
     "entity.minecraft.villager.butcher": "\u00a77Carnicero",
     "entity.minecraft.villager.cartographer": "\u00a77Cart\u00f3grafo",
     "entity.minecraft.villager.cleric": "\u00a77Sacerdote",
@@ -56,11 +56,11 @@
     "entity.minecraft.villager.leatherworker": "\u00a77Peletero",
     "entity.minecraft.villager.librarian": "\u00a77Librero",
     "entity.minecraft.villager.mason": "\u00a77Alba\u00f1il",
-    "entity.minecraft.villager.nitwit": "\u00a77Imb\u00e9cil",
+    "entity.minecraft.villager.nitwit": "\u00a77In\u00fatil",
     "entity.minecraft.villager.none": "\u00a77Aldeano",
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
-    "entity.minecraft.villager.toolsmith": "\u00a77Herrero de herramientas",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Herrero de armas",
+    "entity.minecraft.villager.toolsmith": "\u00a77Herrero",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Armero",
     "entity.minecraft.wandering_trader": "\u00a77Comerciante n\u00f3mada",
     "entity.minecraft.zombie_horse": "\u00a77Caballo zombi",
     "gui.advancements": "\u00a7fProgresos",
