--- a/assets/minecraft/lang/eu_es.json
+++ b/assets/minecraft/lang/eu_es.json
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Argiontzia",
     "container.loom": "\u00a77Ehungailua",
     "container.repair": "\u00a77Konpondu eta izendatu",
-    "container.shulkerBox": "\u00a77Shulker kaxa",
+    "container.shulkerBox": "\u00a77Shulker kutxa",
     "container.smoker": "\u00a77Keetzailea",
     "container.stonecutter": "\u00a77Harriamozgailua",
     "container.upgrade": "\u00a77zure ekipoak berritzea",
