--- a/assets/minecraft/lang/haw_us.json
+++ b/assets/minecraft/lang/haw_us.json
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77Pumekala",
     "container.stonecutter": "\u00a77Kopa\u02bbu",
     "container.upgrade": "\u00a77E ho\u02bbomaika\u02bbi \u02bboe i k\u0101u lako",
-    "entity.minecraft.chest_minecart": "\u00a77Minecart me ka pahu",
+    "entity.minecraft.chest_minecart": "\u00a77Minecart me ka umauma",
     "entity.minecraft.horse": "\u00a77Lio",
     "entity.minecraft.llama": "\u00a77Llama",
     "entity.minecraft.mule": "\u00a77Miula",
@@ -48,29 +48,16 @@
     "entity.minecraft.villager": "\u00a77Kauhale",
     "entity.minecraft.villager.armorer": "\u00a77Ka mea ho\u02bbolimalima",
     "entity.minecraft.villager.butcher": "\u00a77Make",
-    "entity.minecraft.villager.cartographer": "\u00a77Mea kaha ki\u02bbi pa\u02bbi ki\u02bbi",
-    "entity.minecraft.villager.cleric": "\u00a77Kakauolelo",
     "entity.minecraft.villager.farmer": "\u00a77Mahiai",
     "entity.minecraft.villager.fisherman": "\u00a77Lawai\u02bba",
-    "entity.minecraft.villager.fletcher": "\u00a77Fletcher",
-    "entity.minecraft.villager.leatherworker": "\u00a77Hana \u02bbili",
-    "entity.minecraft.villager.librarian": "\u00a77Waihona puke",
-    "entity.minecraft.villager.mason": "\u00a77Mason",
-    "entity.minecraft.villager.nitwit": "\u00a77\u02bbO Nitwit",
     "entity.minecraft.villager.none": "\u00a77Kauhale",
-    "entity.minecraft.villager.shepherd": "\u00a77Kahuhipa",
-    "entity.minecraft.villager.toolsmith": "\u00a77Mea Hana Mea Hana",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Mea Kaua Mea Paka",
-    "entity.minecraft.wandering_trader": "\u00a77Mea Kalepa holoholo",
     "entity.minecraft.zombie_horse": "\u00a77Huaka\u02bbi p\u014d lio",
-    "gui.advancements": "\u00a7f\u02bbO n\u0101 holomua",
     "itemGroup.brewing": "\u00a77Ho\u02bbol\u0101l\u0101",
     "itemGroup.buildingBlocks": "\u00a77N\u0101 palaka hale",
     "itemGroup.combat": "\u00a77Hakak\u0101",
     "itemGroup.decorations": "\u00a77N\u0101 Pihi ho\u02bbonaninani",
     "itemGroup.food": "\u00a77N\u0101 mea \u02bbai",
     "itemGroup.hotbar": "\u00a77N\u0101 Hotbars i M\u0101lama \u02bbia",
-    "itemGroup.inventory": "\u00a77Inventory Ola",
     "itemGroup.materials": "\u00a77N\u0101 Pono Hana",
     "itemGroup.misc": "\u00a77N\u0101 Mea Like \u02bbole",
     "itemGroup.redstone": "\u00a77Redstone",
