--- a/assets/minecraft/lang/ka_ge.json
+++ b/assets/minecraft/lang/ka_ge.json
@@ -13,12 +13,12 @@
     "block.minecraft.pink_shulker_box": "\u00a77\u10d5\u10d0\u10e0\u10d3\u10d8\u10e1\u10e4\u10d4\u10e0\u10d8 \u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
     "block.minecraft.purple_shulker_box": "\u00a77\u10d0\u10da\u10d8\u10e1\u10e4\u10d4\u10e0\u10d8 \u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
     "block.minecraft.red_shulker_box": "\u00a77\u10ec\u10d8\u10d7\u10d4\u10da\u10d8 \u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
-    "block.minecraft.shulker_box": "\u00a77\u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
+    "block.minecraft.shulker_box": "\u00a77\u10e8\u10d0\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
     "block.minecraft.white_shulker_box": "\u00a77\u10d7\u10d4\u10d7\u10e0\u10d8 \u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
     "block.minecraft.yellow_shulker_box": "\u00a77\u10e7\u10d5\u10d8\u10d7\u10d4\u10da\u10d8 \u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
     "container.barrel": "\u00a77\u10d9\u10d0\u10e1\u10e0\u10d8",
     "container.beacon": "\u00a77\u10e8\u10e3\u10e5\u10e3\u10e0\u10d0",
-    "container.blast_furnace": "\u00a77\u10db\u10e4\u10d4\u10d7\u10e5\u10d5\u10d4\u10da\u10d8 \u10e6\u10e3\u10db\u10d4\u10da\u10d8",
+    "container.blast_furnace": "\u00a77\u10d1\u10e0\u10eb\u10db\u10d4\u10d3\u10d8",
     "container.brewing": "\u00a77\u10e1\u10d0\u10ee\u10d0\u10e0\u10e8\u10d8 \u10e5\u10e3\u10e0\u10d0",
     "container.cartography_table": "\u00a77\u10d9\u10d0\u10e0\u10e2\u10dd\u10d2\u10e0\u10d0\u10e4\u10d8\u10e1 \u10db\u10d0\u10d2\u10d8\u10d3\u10d0",
     "container.chest": "\u00a77\u10e1\u10d9\u10d8\u10d5\u10e0\u10d8",
@@ -37,7 +37,7 @@
     "container.loom": "\u00a77\u10d3\u10d0\u10d6\u10d2\u10d0",
     "container.repair": "\u00a77\u10e8\u10d4\u10d9\u10d4\u10d7\u10d4\u10d1\u10d0 \u10d3\u10d0 \u10e1\u10d0\u10ee\u10d4\u10da\u10d8\u10e1 \u10d3\u10d0\u10e0\u10e5\u10db\u10d4\u10d5\u10d0",
     "container.shulkerBox": "\u00a77\u10e8\u10e3\u10da\u10d9\u10d4\u10e0\u10d8\u10e1 \u10e7\u10e3\u10d7\u10d8",
-    "container.smoker": "\u00a77\u10db\u10ec\u10d4\u10d5\u10d4\u10da\u10d8",
+    "container.smoker": "\u00a77\u10e8\u10d4\u10e1\u10d0\u10d1\u10dd\u10da\u10d8",
     "container.stonecutter": "\u00a77\u10e5\u10d5\u10d8\u10e1 \u10db\u10ed\u10e0\u10d4\u10da\u10d8",
     "container.upgrade": "\u00a77\u10d0\u10e6\u10ed\u10e3\u10e0\u10d5\u10d8\u10da\u10dd\u10d1\u10d8\u10e1 \u10d2\u10d0\u10e3\u10db\u10ef\u10dd\u10d1\u10d4\u10e1\u10d4\u10d1\u10d0",
     "entity.minecraft.chest_minecart": "\u00a77\u10e1\u10d9\u10d8\u10d5\u10e0\u10d8\u10d0\u10dc\u10d8 \u10e3\u10e0\u10d8\u10d9\u10d0",
@@ -61,7 +61,7 @@
     "entity.minecraft.villager.shepherd": "\u00a77\u10db\u10ec\u10e7\u10d4\u10db\u10e1\u10d8",
     "entity.minecraft.villager.toolsmith": "\u00a77\u10ee\u10d4\u10da\u10e1\u10d0\u10ec\u10e7\u10dd\u10d7\u10d0 \u10dd\u10e1\u10e2\u10d0\u10e2\u10d8",
     "entity.minecraft.villager.weaponsmith": "\u00a77\u10d8\u10d0\u10e0\u10d0\u10e6\u10d8\u10e1 \u10dd\u10e1\u10e2\u10d0\u10e2\u10d8",
-    "entity.minecraft.wandering_trader": "\u00a77\u10db\u10dd\u10ee\u10d4\u10e2\u10d8\u10d0\u10da\u10d4 \u10d5\u10d0\u10ed\u10d0\u10e0\u10d8",
+    "entity.minecraft.wandering_trader": "\u00a77\u10db\u10dd\u10d2\u10d6\u10d0\u10e3\u10e0\u10d8 \u10d5\u10d0\u10ed\u10d0\u10e0\u10d8",
     "entity.minecraft.zombie_horse": "\u00a77\u10d6\u10dd\u10db\u10d1\u10d8 \u10ea\u10ee\u10d4\u10dc\u10d8",
     "gui.advancements": "\u00a7f\u10db\u10d8\u10e6\u10ec\u10d4\u10d5\u10d4\u10d1\u10d8",
     "itemGroup.brewing": "\u00a77\u10ee\u10e1\u10dc\u10d0\u10e0\u10d4\u10d1\u10d8\u10e1 \u10db\u10dd\u10ee\u10d0\u10e0\u10e8\u10d5\u10d0",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77\u10db\u10dd\u10d7\u10d0\u10db\u10d0\u10e8\u10d8\u10e1 \u10d8\u10dc\u10d5\u10d4\u10dc\u10e2\u10d0\u10e0\u10d8",
     "itemGroup.materials": "\u00a77\u10db\u10d0\u10e1\u10d0\u10da\u10d4\u10d1\u10d8",
     "itemGroup.misc": "\u00a77\u10e1\u10ee\u10d5\u10d0\u10d3\u10d0\u10e1\u10ee\u10d5\u10d0",
-    "itemGroup.redstone": "\u00a77\u10e0\u10d4\u10d3\u10e1\u10e2\u10dd\u10dc\u10d8",
+    "itemGroup.redstone": "\u00a77\u10e0\u10d4\u10d3\u10e1\u10e2\u10dd\u10e3\u10dc\u10d8",
     "itemGroup.search": "\u00a77\u10dc\u10d8\u10d5\u10d7\u10d4\u10d1\u10d8\u10e1 \u10eb\u10d4\u10d1\u10dc\u10d0",
     "itemGroup.tools": "\u00a77\u10ee\u10d4\u10da\u10e1\u10d0\u10ec\u10e7\u10dd\u10d4\u10d1\u10d8",
     "itemGroup.transportation": "\u00a77\u10e2\u10e0\u10d0\u10dc\u10e1\u10de\u10dd\u10e0\u10e2\u10d8",
@@ -82,5 +82,5 @@
     "merchant.level.3": "\u00a77\u10db\u10dd\u10d2\u10d6\u10d0\u10e3\u10e0\u10d8",
     "merchant.level.4": "\u00a77\u10d4\u10e5\u10e1\u10de\u10d4\u10e0\u10e2\u10d8",
     "merchant.level.5": "\u00a77\u10db\u10d0\u10e1\u10e2\u10d4\u10e0\u10d8",
-    "merchant.trades": "\u00a77\u10d2\u10d0\u10e7\u10d8\u10d3\u10d5\u10d4\u10d1\u10d8"
+    "merchant.trades": "\u00a77\u10e8\u10d4\u10d7\u10d0\u10d5\u10d0\u10d6\u10d4\u10d1\u10d4\u10d1\u10d8"
 }
