--- a/assets/minecraft/lang/kk_kz.json
+++ b/assets/minecraft/lang/kk_kz.json
@@ -26,9 +26,9 @@
     "container.crafting": "\u00a77\u0416\u0430\u0441\u0430\u0443",
     "container.creative": "\u00a77\u0417\u0430\u0442 \u0442\u0430\u04a3\u0434\u0430\u0443",
     "container.dispenser": "\u00a77\u0422\u0430\u0440\u0430\u0442\u049b\u044b\u0448",
-    "container.dropper": "\u00a77\u0422\u0430\u0441\u0442\u0430\u0443\u044b\u0448",
+    "container.dropper": "\u00a77\u0422\u0430\u0441\u0442\u0430\u0493\u044b\u0448",
     "container.enchant": "\u00a77\u0421\u0438\u049b\u044b\u0440\u043b\u0430\u0443",
-    "container.enderchest": "\u00a77\u0415\u043d\u0434\u0435\u0440 \u0441\u0430\u043d\u0434\u044b\u049b",
+    "container.enderchest": "\u00a77\u042d\u043d\u0434\u0435\u0440 \u0441\u0430\u043d\u0434\u044b\u049b",
     "container.furnace": "\u00a77\u041f\u0435\u0448",
     "container.grindstone_title": "\u00a77\u0416\u04e9\u043d\u0434\u0435\u0443 \u043c\u0435\u043d \u0441\u0438\u049b\u044b\u0440\u0441\u044b\u0437\u0434\u0430\u0443",
     "container.hopper": "\u00a77\u049a\u04b1\u0439\u0493\u044b\u0448",
@@ -40,7 +40,7 @@
     "container.smoker": "\u00a77\u042b\u0441\u0442\u0430\u0443\u044b\u0448",
     "container.stonecutter": "\u00a77\u0422\u0430\u0441\u043a\u0435\u0441\u043a\u0456\u0448",
     "container.upgrade": "\u00a77\u0416\u0430\u0431\u0434\u044b\u049b \u0436\u0430\u04a3\u0430\u0440\u0442\u0443",
-    "entity.minecraft.chest_minecart": "\u00a77\u0421\u0430\u043d\u0434\u044b\u049b\u0442\u044b \u0432\u0430\u0433\u043e\u043d\u0448\u0430",
+    "entity.minecraft.chest_minecart": "\u00a77\u0421\u0430\u043d\u0434\u044b\u049b \u0432\u0430\u0433\u043e\u043d\u0448\u0430\u0441\u044b",
     "entity.minecraft.horse": "\u00a77\u0410\u0442",
     "entity.minecraft.llama": "\u00a77\u041b\u0430\u043c\u0430",
     "entity.minecraft.mule": "\u00a77\u049a\u0430\u0448\u044b\u0440",
@@ -49,7 +49,7 @@
     "entity.minecraft.villager.armorer": "\u00a77\u0421\u0430\u0443\u044b\u0442\u0448\u044b",
     "entity.minecraft.villager.butcher": "\u00a77\u0415\u0442\u0448\u0456",
     "entity.minecraft.villager.cartographer": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444",
-    "entity.minecraft.villager.cleric": "\u00a77\u041a\u043b\u0438\u0440\u0438\u043a",
+    "entity.minecraft.villager.cleric": "\u00a77\u041a\u043b\u0435\u0440\u0438\u043a",
     "entity.minecraft.villager.farmer": "\u00a77\u0415\u0433\u0456\u043d\u0448\u0456",
     "entity.minecraft.villager.fisherman": "\u00a77\u0411\u0430\u043b\u044b\u049b\u0448\u044b",
     "entity.minecraft.villager.fletcher": "\u00a77\u041e\u049b\u0448\u044b",
@@ -65,11 +65,11 @@
     "entity.minecraft.zombie_horse": "\u00a77\u0417\u043e\u043c\u0431\u0438 \u0430\u0442",
     "gui.advancements": "\u00a7f\u0416\u0435\u0442\u0456\u0441\u0442\u0456\u043a",
     "itemGroup.brewing": "\u00a77\u0406\u0448\u0456\u0440\u0442\u043a\u0456 \u0434\u0435\u043c\u0434\u0435\u0443",
-    "itemGroup.buildingBlocks": "\u00a77\u049a\u04b1\u0440\u044b\u043b\u044b\u0441 \u0431\u043b\u043e\u0433\u0456",
-    "itemGroup.combat": "\u00a77\u049a\u0430\u0440\u0443-\u0441\u0430\u0443\u044b\u0442",
-    "itemGroup.decorations": "\u00a77\u0411\u0435\u0437\u0435\u043d\u0434\u0456\u0440\u0443 \u0431\u043b\u043e\u0433\u0456",
+    "itemGroup.buildingBlocks": "\u00a77\u049a\u04b1\u0440\u044b\u043b\u044b\u0441",
+    "itemGroup.combat": "\u00a77\u0428\u0430\u0439\u049b\u0430\u0441",
+    "itemGroup.decorations": "\u00a77\u0411\u0435\u0437\u0435\u043d\u0434\u0456\u0440\u0443",
     "itemGroup.food": "\u00a77\u0410\u0437\u044b\u049b-\u0442\u04af\u043b\u0456\u043a",
-    "itemGroup.hotbar": "\u00a77\u0421\u0430\u049b\u0442\u0430\u043b\u0493\u0430\u043d \u049b\u04b1\u0440\u0430\u043b \u043b\u0435\u0433\u0456",
+    "itemGroup.hotbar": "\u00a77\u0421\u0430\u049b\u0442\u0430\u043b\u0493\u0430\u043d \u0445\u043e\u0442\u0431\u0430\u0440",
     "itemGroup.inventory": "\u00a77\u0422\u0456\u0440\u0456 \u049b\u0430\u043b\u0443 \u043c\u04b1\u049b\u0430\u043c\u043c\u0430\u043b\u044b",
     "itemGroup.materials": "\u00a77\u041c\u0430\u0442\u0435\u0440\u0438\u0430\u043b",
     "itemGroup.misc": "\u00a77\u0422\u04af\u0440\u043b\u0456",
@@ -82,5 +82,5 @@
     "merchant.level.3": "\u00a77\u041a\u04d9\u0441\u0456\u043f\u0448\u0456",
     "merchant.level.4": "\u00a77\u041c\u0430\u043c\u0430\u043d",
     "merchant.level.5": "\u00a77\u0428\u0435\u0431\u0435\u0440",
-    "merchant.trades": "\u00a77\u04b0\u0441\u044b\u043d\u044b\u0441\u044b"
+    "merchant.trades": "\u00a77\u04b0\u0441\u044b\u043d\u044b\u0441"
 }
