--- a/assets/minecraft/lang/ko_kr.json
+++ b/assets/minecraft/lang/ko_kr.json
@@ -72,7 +72,7 @@
     "itemGroup.hotbar": "\u00a77\uc800\uc7a5\ub41c \ub2e8\ucd95 \ubc14",
     "itemGroup.inventory": "\u00a77\uc11c\ubc14\uc774\ubc8c \ubcf4\uad00\ud568",
     "itemGroup.materials": "\u00a77\uc7ac\ub8cc",
-    "itemGroup.misc": "\u00a77\uae30\ud0c0 \uc544\uc774\ud15c",
+    "itemGroup.misc": "\u00a77\uae30\ud0c0",
     "itemGroup.redstone": "\u00a77\ub808\ub4dc\uc2a4\ud1a4",
     "itemGroup.search": "\u00a77\uc544\uc774\ud15c \uac80\uc0c9",
     "itemGroup.tools": "\u00a77\ub3c4\uad6c",
