--- a/assets/minecraft/lang/la_la.json
+++ b/assets/minecraft/lang/la_la.json
@@ -1,34 +1,34 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77Nigra capsa concheri",
-    "block.minecraft.blue_shulker_box": "\u00a77Cerulea capsa concheri",
-    "block.minecraft.brown_shulker_box": "\u00a77Brunnea capsa concheri",
-    "block.minecraft.cyan_shulker_box": "\u00a77Cyanea capsa concheri",
-    "block.minecraft.gray_shulker_box": "\u00a77Cinerea capsa concheri",
-    "block.minecraft.green_shulker_box": "\u00a77Viridis capsa concheri",
-    "block.minecraft.light_blue_shulker_box": "\u00a77Aeria capsa concheri",
-    "block.minecraft.light_gray_shulker_box": "\u00a77Cana capsa concheri",
-    "block.minecraft.lime_shulker_box": "\u00a77Prasina capsa concheri",
-    "block.minecraft.magenta_shulker_box": "\u00a77Rubropurpurea capsa concheri",
-    "block.minecraft.orange_shulker_box": "\u00a77Aurantia capsa concheri",
-    "block.minecraft.pink_shulker_box": "\u00a77Rosea capsa concheri",
-    "block.minecraft.purple_shulker_box": "\u00a77Purpurea capsa concheri",
-    "block.minecraft.red_shulker_box": "\u00a77Rubra capsa concheri",
-    "block.minecraft.shulker_box": "\u00a77Capsa concheri",
-    "block.minecraft.white_shulker_box": "\u00a77Alba capsa concheri",
-    "block.minecraft.yellow_shulker_box": "\u00a77Flava capsa concheri",
+    "block.minecraft.black_shulker_box": "\u00a77Capsa shulker nigra",
+    "block.minecraft.blue_shulker_box": "\u00a77Capsa shulker caerulea",
+    "block.minecraft.brown_shulker_box": "\u00a77Capsa shulker brunnea",
+    "block.minecraft.cyan_shulker_box": "\u00a77Capsa shulker cyanea",
+    "block.minecraft.gray_shulker_box": "\u00a77Capsa shulker cinerea",
+    "block.minecraft.green_shulker_box": "\u00a77Capsa shulker viridis",
+    "block.minecraft.light_blue_shulker_box": "\u00a77Capsa shulker aeria",
+    "block.minecraft.light_gray_shulker_box": "\u00a77Capsa shulker cana",
+    "block.minecraft.lime_shulker_box": "\u00a77Capsa shulker prasina",
+    "block.minecraft.magenta_shulker_box": "\u00a77Capsa shulker rubropurpurea",
+    "block.minecraft.orange_shulker_box": "\u00a77Capsa shulker aurantia",
+    "block.minecraft.pink_shulker_box": "\u00a77Capsa shulker rosea",
+    "block.minecraft.purple_shulker_box": "\u00a77Capsa shulker purpurea",
+    "block.minecraft.red_shulker_box": "\u00a77Capsa shulker rubra",
+    "block.minecraft.shulker_box": "\u00a77Capsa shulker",
+    "block.minecraft.white_shulker_box": "\u00a77Capsa shulker alba",
+    "block.minecraft.yellow_shulker_box": "\u00a77Capsa shulker flava",
     "container.barrel": "\u00a77Cupa",
     "container.beacon": "\u00a77Radiator",
     "container.blast_furnace": "\u00a77Caminus",
     "container.brewing": "\u00a77Mixtarius",
     "container.cartography_table": "\u00a77Mensa chartographiae",
     "container.chest": "\u00a77Cista",
-    "container.chestDouble": "\u00a77Cista Magna",
+    "container.chestDouble": "\u00a77Cista magna",
     "container.crafting": "\u00a77Fabricatio",
-    "container.creative": "\u00a77Electio rerum",
+    "container.creative": "\u00a77Selectio rerum",
     "container.dispenser": "\u00a77proiciens",
     "container.dropper": "\u00a77Demittetrum",
     "container.enchant": "\u00a77Incanta",
-    "container.enderchest": "\u00a77Cista Finalis",
+    "container.enderchest": "\u00a77Cista Ender",
     "container.furnace": "\u00a77Fornax",
     "container.grindstone_title": "\u00a77Reficere et delustrare",
     "container.hopper": "\u00a77Infundibulum rerum",
@@ -36,7 +36,7 @@
     "container.lectern": "\u00a77Lectrum",
     "container.loom": "\u00a77Tela",
     "container.repair": "\u00a77Reparare et nominare",
-    "container.shulkerBox": "\u00a77Capsa concheri",
+    "container.shulkerBox": "\u00a77Capsa shulker",
     "container.smoker": "\u00a77Fumigator",
     "container.stonecutter": "\u00a77Saxumsecator",
     "container.upgrade": "\u00a77Meliora res",
@@ -46,7 +46,7 @@
     "entity.minecraft.mule": "\u00a77Mulus",
     "entity.minecraft.skeleton_horse": "\u00a77Equus sceletalis",
     "entity.minecraft.villager": "\u00a77Vicanus",
-    "entity.minecraft.villager.armorer": "\u00a77Armifaber",
+    "entity.minecraft.villager.armorer": "\u00a77Faber armaturarum",
     "entity.minecraft.villager.butcher": "\u00a77Lanius",
     "entity.minecraft.villager.cartographer": "\u00a77Cartographiator",
     "entity.minecraft.villager.cleric": "\u00a77Sacerdos",
@@ -59,8 +59,8 @@
     "entity.minecraft.villager.nitwit": "\u00a77Stultus",
     "entity.minecraft.villager.none": "\u00a77Vicanus",
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
-    "entity.minecraft.villager.toolsmith": "\u00a77Faber Instrumenti",
-    "entity.minecraft.villager.weaponsmith": "\u00a77Faber Ferri",
+    "entity.minecraft.villager.toolsmith": "\u00a77Faber instrumentorum",
+    "entity.minecraft.villager.weaponsmith": "\u00a77Faber armorum",
     "entity.minecraft.wandering_trader": "\u00a77Mercator vagus",
     "entity.minecraft.zombie_horse": "\u00a77Equus resurrectus",
     "gui.advancements": "\u00a7fIncrementa",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77Inventarium supervivendi",
     "itemGroup.materials": "\u00a77Materiae",
     "itemGroup.misc": "\u00a77Miscellaneus",
-    "itemGroup.redstone": "\u00a77Rubrolapis",
+    "itemGroup.redstone": "\u00a77Redstone",
     "itemGroup.search": "\u00a77Quaere Res",
     "itemGroup.tools": "\u00a77Instrumenta",
     "itemGroup.transportation": "\u00a77Transvenctio",
