--- a/assets/minecraft/lang/lmo.json
+++ b/assets/minecraft/lang/lmo.json
@@ -2,7 +2,7 @@
     "block.minecraft.black_shulker_box": "\u00a77Scatola de shulker negra",
     "block.minecraft.blue_shulker_box": "\u00a77Scatola de shulker bloeu",
     "block.minecraft.brown_shulker_box": "\u00a77Scatola de shulker marrona",
-    "block.minecraft.cyan_shulker_box": "\u00a77Scatola de shulker ciana",
+    "block.minecraft.cyan_shulker_box": "\u00a77Scatola de shulker celesta",
     "block.minecraft.gray_shulker_box": "\u00a77Scatola de shulker grisa",
     "block.minecraft.green_shulker_box": "\u00a77Scatola de shulker verda",
     "block.minecraft.light_blue_shulker_box": "\u00a77Scatola de shulker bloeu ciar",
@@ -15,20 +15,20 @@
     "block.minecraft.red_shulker_box": "\u00a77Scatola de shulker rossa",
     "block.minecraft.shulker_box": "\u00a77Scatola de shulker",
     "block.minecraft.white_shulker_box": "\u00a77Scatola de shulker bianca",
-    "block.minecraft.yellow_shulker_box": "\u00a77Scatola de shulker gialda",
+    "block.minecraft.yellow_shulker_box": "\u00a77Scatola de shulker sgialda",
     "container.barrel": "\u00a77Baril",
     "container.beacon": "\u00a77Far",
     "container.blast_furnace": "\u00a77Volt-forn",
-    "container.brewing": "\u00a77Lambic",
-    "container.cartography_table": "\u00a77Banch del cartograf",
-    "container.chest": "\u00a77Baull",
-    "container.chestDouble": "\u00a77Baull grand",
+    "container.brewing": "\u00a77Lambich",
+    "container.cartography_table": "\u00a77Tavol de cartografia",
+    "container.chest": "\u00a77Cesta",
+    "container.chestDouble": "\u00a77Cesta granda",
     "container.crafting": "\u00a77Fabricazzion",
-    "container.creative": "\u00a77Selezzion de lavor\u00e0",
+    "container.creative": "\u00a77Scerna de lavor\u00e0",
     "container.dispenser": "\u00a77Scompartidor",
     "container.dropper": "\u00a77Sgetador",
     "container.enchant": "\u00a77Instria",
-    "container.enderchest": "\u00a77Baull del Bord",
+    "container.enderchest": "\u00a77Cesta de l'ender",
     "container.furnace": "\u00a77Fornas",
     "container.grindstone_title": "\u00a77Giusta e desencanta",
     "container.hopper": "\u00a77Tramoeugia",
@@ -37,32 +37,32 @@
     "container.loom": "\u00a77Telar",
     "container.repair": "\u00a77Giusta e d\u00e0 un nom",
     "container.shulkerBox": "\u00a77Scatola de shulker",
-    "container.smoker": "\u00a77Fumentador",
+    "container.smoker": "\u00a77Afumegador",
     "container.stonecutter": "\u00a77Taja-preje",
     "container.upgrade": "\u00a77Mejora un lavor\u00e0",
-    "entity.minecraft.chest_minecart": "\u00a77Carr cont baull",
+    "entity.minecraft.chest_minecart": "\u00a77Carrell de minera con cesta",
     "entity.minecraft.horse": "\u00a77Cavall",
     "entity.minecraft.llama": "\u00a77Lama",
     "entity.minecraft.mule": "\u00a77Mul",
     "entity.minecraft.skeleton_horse": "\u00a77Cavall schelter",
-    "entity.minecraft.villager": "\u00a77Paisan",
+    "entity.minecraft.villager": "\u00a77Villan",
     "entity.minecraft.villager.armorer": "\u00a77Corazzer",
     "entity.minecraft.villager.butcher": "\u00a77Becher",
     "entity.minecraft.villager.cartographer": "\u00a77Cartograf",
-    "entity.minecraft.villager.cleric": "\u00a77Ceregh",
+    "entity.minecraft.villager.cleric": "\u00a77Prevost",
     "entity.minecraft.villager.farmer": "\u00a77Paisan",
     "entity.minecraft.villager.fisherman": "\u00a77Pescador",
     "entity.minecraft.villager.fletcher": "\u00a77Ferrer de flizze",
-    "entity.minecraft.villager.leatherworker": "\u00a77Lavorador de coram",
+    "entity.minecraft.villager.leatherworker": "\u00a77Conficior",
     "entity.minecraft.villager.librarian": "\u00a77Bibliotecari",
     "entity.minecraft.villager.mason": "\u00a77Magut",
-    "entity.minecraft.villager.nitwit": "\u00a77Bamba",
-    "entity.minecraft.villager.none": "\u00a77Paisan",
+    "entity.minecraft.villager.nitwit": "\u00a77Bambo",
+    "entity.minecraft.villager.none": "\u00a77Villan",
     "entity.minecraft.villager.shepherd": "\u00a77Pastor",
     "entity.minecraft.villager.toolsmith": "\u00a77Ferrer",
     "entity.minecraft.villager.weaponsmith": "\u00a77Armaroeul",
     "entity.minecraft.wandering_trader": "\u00a77Mercant ramingh",
-    "entity.minecraft.zombie_horse": "\u00a77Cavall zombi",
+    "entity.minecraft.zombie_horse": "\u00a77Cavall zombie",
     "gui.advancements": "\u00a7fProgress",
     "itemGroup.brewing": "\u00a77Pozzion",
     "itemGroup.buildingBlocks": "\u00a77Bloch de costruzzion",
@@ -73,10 +73,10 @@
     "itemGroup.inventory": "\u00a77Inventari de soravivenza",
     "itemGroup.materials": "\u00a77Materiai",
     "itemGroup.misc": "\u00a77Vari",
-    "itemGroup.redstone": "\u00a77Preja rossa",
+    "itemGroup.redstone": "\u00a77Prejarossa",
     "itemGroup.search": "\u00a77Cerca",
-    "itemGroup.tools": "\u00a77Arnes",
-    "itemGroup.transportation": "\u00a77Trasport",
+    "itemGroup.tools": "\u00a77Usadei",
+    "itemGroup.transportation": "\u00a77Straport",
     "merchant.level.1": "\u00a77Novell",
     "merchant.level.2": "\u00a77Prendis",
     "merchant.level.3": "\u00a77Specializad",
