--- a/assets/minecraft/lang/oc_fr.json
+++ b/assets/minecraft/lang/oc_fr.json
@@ -18,7 +18,7 @@
     "block.minecraft.yellow_shulker_box": "\u00a77B\u00f3stia de Shulker jauna",
     "container.barrel": "\u00a77Barrica",
     "container.beacon": "\u00a77Balisa",
-    "container.blast_furnace": "\u00a77Forn\u00e8u de fusion",
+    "container.blast_furnace": "\u00a77Forn\u00e8l de fusion",
     "container.brewing": "\u00a77Alambic",
     "container.cartography_table": "\u00a77Taula de cartografia",
     "container.chest": "\u00a77C\u00f2fre",
@@ -28,8 +28,9 @@
     "container.dispenser": "\u00a77Distribuidor",
     "container.dropper": "\u00a77Dropper",
     "container.enchant": "\u00a77Encantar",
-    "container.enderchest": "\u00a77C\u00f2fre de l'Ender",
+    "container.enderchest": "\u00a77C\u00f2fre d'ender",
     "container.furnace": "\u00a77Forn",
+    "container.grindstone_title": "\u00a77Reparer e desembreissar",
     "container.hopper": "\u00a77Embut",
     "container.inventory": "\u00a77Inventari",
     "container.lectern": "\u00a77Pupitre",
@@ -38,6 +39,7 @@
     "container.shulkerBox": "\u00a77B\u00f3stia de Shulker",
     "container.smoker": "\u00a77Fumador",
     "container.stonecutter": "\u00a77Peiri\u00e8r",
+    "container.upgrade": "\u00a77Malhorar l'equipament",
     "entity.minecraft.chest_minecart": "\u00a77Vagonet amb c\u00f2fre",
     "entity.minecraft.horse": "\u00a77Cavau",
     "entity.minecraft.llama": "\u00a77Lama",
