--- a/assets/minecraft/lang/so_so.json
+++ b/assets/minecraft/lang/so_so.json
@@ -17,14 +17,26 @@
     "block.minecraft.white_shulker_box": "\u00a77Sanduuqa White Shulle",
     "block.minecraft.yellow_shulker_box": "\u00a77Sanduuqa shalker jaalaha ah",
     "container.barrel": "\u00a77Foosto",
+    "container.beacon": "\u00a77Sixirka Lamp",
     "container.blast_furnace": "\u00a77foornada_qarxa",
+    "container.brewing": "\u00a77Meesha Wax-qabashada",
+    "container.cartography_table": "\u00a77Shaxda sawir gacmeedka",
     "container.chest": "\u00a77Sanduq",
     "container.chestDouble": "\u00a77Sanduq Wayn",
+    "container.crafting": "\u00a77Farsamaynta",
+    "container.creative": "\u00a77Xulashada Shayga",
+    "container.dispenser": "\u00a77Qaybiye",
+    "container.dropper": "\u00a77Tuur",
+    "container.enchant": "\u00a77Sixirka",
     "container.enderchest": "\u00a77Ender Sanduq",
     "container.furnace": "\u00a77Forno",
     "container.grindstone_title": "\u00a77Dayactir & Nadaafad",
+    "container.hopper": "\u00a77Shayga Hopper",
     "container.inventory": "\u00a77Inventory",
+    "container.lectern": "\u00a77Muxaadaro",
     "container.loom": "\u00a77Dhar",
+    "container.repair": "\u00a77Dayactirka & Magaca",
+    "container.shulkerBox": "\u00a77Shulker laabta",
     "container.smoker": "\u00a77Sigaarka",
     "container.stonecutter": "\u00a77Qoraa",
     "container.upgrade": "\u00a77Qalabka kor u qaadista",
@@ -32,13 +44,39 @@
     "entity.minecraft.horse": "\u00a77Faras",
     "entity.minecraft.llama": "\u00a77Ari",
     "entity.minecraft.mule": "\u00a77Baqal",
+    "entity.minecraft.skeleton_horse": "\u00a77Faras Qalfoofka",
+    "entity.minecraft.villager": "\u00a77Tuulo",
+    "entity.minecraft.villager.armorer": "\u00a77Gaashaanle",
+    "entity.minecraft.villager.butcher": "\u00a77Hilible",
+    "entity.minecraft.villager.cartographer": "\u00a77Sawir-qaade",
+    "entity.minecraft.villager.cleric": "\u00a77Wadaad",
     "entity.minecraft.villager.farmer": "\u00a77Beralay",
     "entity.minecraft.villager.fisherman": "\u00a77Kaluumeysato",
+    "entity.minecraft.villager.fletcher": "\u00a77Farsamayaqaan qaansada",
+    "entity.minecraft.villager.leatherworker": "\u00a77Shaqaale maqaar",
+    "entity.minecraft.villager.librarian": "\u00a77Maktabadaha",
     "entity.minecraft.villager.mason": "\u00a77Dhageysiga",
+    "entity.minecraft.villager.nitwit": "\u00a77Nitwit",
+    "entity.minecraft.villager.none": "\u00a77Tuulo",
+    "entity.minecraft.villager.shepherd": "\u00a77Adhijir",
     "entity.minecraft.villager.toolsmith": "\u00a77Gawaarida",
     "entity.minecraft.villager.weaponsmith": "\u00a77Hubka",
+    "entity.minecraft.wandering_trader": "\u00a77Ganacsade Wareegaya",
     "entity.minecraft.zombie_horse": "\u00a77Faras Zombie",
+    "gui.advancements": "\u00a7fHorumarka",
+    "itemGroup.brewing": "\u00a77Wax Karrin",
+    "itemGroup.buildingBlocks": "\u00a77Qaybaha Dhismaha",
+    "itemGroup.combat": "\u00a77Dagaal",
+    "itemGroup.decorations": "\u00a77Qulqullada Qurxinta",
+    "itemGroup.food": "\u00a77Cuntooyinka",
     "itemGroup.hotbar": "\u00a77Hotbars keysan\n",
+    "itemGroup.inventory": "\u00a77Liiska Badbaadada",
+    "itemGroup.materials": "\u00a77Qalabka",
+    "itemGroup.misc": "\u00a77Kala Duwan",
+    "itemGroup.redstone": "\u00a77Dhagax Cas",
+    "itemGroup.search": "\u00a77Alaabada Raadi",
+    "itemGroup.tools": "\u00a77Qalab",
+    "itemGroup.transportation": "\u00a77Gaadiidka",
     "merchant.level.1": "\u00a77Newbie",
     "merchant.level.2": "\u00a77Kaaliye",
     "merchant.level.3": "\u00a77Nin farshaxan",
