--- a/assets/minecraft/lang/tlh_aa.json
+++ b/assets/minecraft/lang/tlh_aa.json
@@ -1,52 +1,52 @@
 {
-    "block.minecraft.black_shulker_box": "\u00a77ghachwI' DerlIq qIj",
-    "block.minecraft.blue_shulker_box": "\u00a77SuDbogh \u2018ej Hurghbogh ghachwI' DerlIq",
-    "block.minecraft.brown_shulker_box": "\u00a77Doqbogh \u2018ej wovbe\u2019bogh ghachwI' DerlIq",
-    "block.minecraft.cyan_shulker_box": "\u00a77SuDbogh \u2019ej wovqu\u2019bogh ghachwI' DerlIq",
-    "block.minecraft.gray_shulker_box": "\u00a77qIjbogh 'ej wovbogh ghachwI' DerlIq",
-    "block.minecraft.green_shulker_box": "\u00a77ghachwI' DerlIq SuDqu\u2019",
-    "block.minecraft.light_blue_shulker_box": "\u00a77SuDbogh \u2018ej wovbogh ghachwI' DerlIq",
-    "block.minecraft.light_gray_shulker_box": "\u00a77qIjbogh \u2018ej wovqu\u2019bogh ghachwI' DerlIq",
-    "block.minecraft.lime_shulker_box": "\u00a77SuDqu\u2019bogh \u2018ej wovbogh ghachwI' DerlIq",
-    "block.minecraft.magenta_shulker_box": "\u00a77Doqqu\u2019bogh \u2018ej SuDbogh ghachwI' DerlIq",
-    "block.minecraft.orange_shulker_box": "\u00a77Doqbogh \u2018ej wovbogh ghachwI' DerlIq",
-    "block.minecraft.pink_shulker_box": "\u00a77Doqqu\u2019bogh \u2018ej wovbogh ghachwI' DerlIq",
-    "block.minecraft.purple_shulker_box": "\u00a77Doqbogh 'ej SuDbogh ghachwI' DerlIq",
-    "block.minecraft.red_shulker_box": "\u00a77ghachwI' DerlIq Doqqu'",
-    "block.minecraft.shulker_box": "\u00a77ghachwI' DerlIq",
-    "block.minecraft.white_shulker_box": "\u00a77ghachwI' DerlIq chIS",
-    "block.minecraft.yellow_shulker_box": "\u00a77SuDbogh \u2018ej wovbogh ghachwI' DerlIq",
+    "block.minecraft.black_shulker_box": "\u00a77shulker ngaSwI' qIj",
+    "block.minecraft.blue_shulker_box": "\u00a77SuDbogh \u2018ej Hurghbogh shulker ngaSwI'",
+    "block.minecraft.brown_shulker_box": "\u00a77Doqbogh \u2018ej wovbe\u2019bogh shulker ngaSwI'",
+    "block.minecraft.cyan_shulker_box": "\u00a77SuDqu'bogh 'ej wovbogh shulker ngaSwI'",
+    "block.minecraft.gray_shulker_box": "\u00a77qIjbogh 'ej wovbogh shulker ngaSwI'",
+    "block.minecraft.green_shulker_box": "\u00a77shulker ngaSwI' SuDqu\u2019",
+    "block.minecraft.light_blue_shulker_box": "\u00a77SuDbogh \u2018ej wovbogh shulker ngaSwI'",
+    "block.minecraft.light_gray_shulker_box": "\u00a77qIjbogh \u2018ej wovqu\u2019bogh shulker ngaSwI'",
+    "block.minecraft.lime_shulker_box": "\u00a77SuDqu\u2019bogh \u2018ej wovbogh shulker ngaSwI'",
+    "block.minecraft.magenta_shulker_box": "\u00a77Doqqu'bogh 'ej SuDbogh shulker ngaSwI'",
+    "block.minecraft.orange_shulker_box": "\u00a77Doqbogh \u2018ej wovbogh shulker ngaSwI'",
+    "block.minecraft.pink_shulker_box": "\u00a77Doqqu\u2019bogh \u2018ej wovbogh shulker ngaSwI'",
+    "block.minecraft.purple_shulker_box": "\u00a77Doqbogh 'ej SuDbogh shulker ngaSwI'",
+    "block.minecraft.red_shulker_box": "\u00a77shulker ngaSwI' Doqqu'",
+    "block.minecraft.shulker_box": "\u00a77shulker ngaSwI'",
+    "block.minecraft.white_shulker_box": "\u00a77shulker ngaSwI' chIS",
+    "block.minecraft.yellow_shulker_box": "\u00a77SuDbogh 'ej wovqu'bogh shulker ngaSwI'",
     "container.barrel": "\u00a77qegh",
     "container.beacon": "\u00a77rI'meH wovmoHwI'",
     "container.blast_furnace": "\u00a77vIncha' tujqu'",
-    "container.brewing": "\u00a77'IDnar taS qal'aq",
+    "container.brewing": "\u00a77taS vutmeH qal'aq",
     "container.cartography_table": "\u00a77pu'jIn raS",
     "container.chest": "\u00a77DerlIq",
-    "container.chestDouble": "\u00a77ngaSwI' tIn",
+    "container.chestDouble": "\u00a77DerlIq tIn",
     "container.crafting": "\u00a77chenmoH",
     "container.creative": "\u00a77Doch wIv",
     "container.dispenser": "\u00a77peSwI'",
     "container.dropper": "\u00a77chaghwI'",
     "container.enchant": "\u00a77laH chel",
-    "container.enderchest": "\u00a77vanwI' DerlIq",
+    "container.enderchest": "\u00a77ender DerlIq",
     "container.furnace": "\u00a77vIncha'",
     "container.grindstone_title": "\u00a77tI' reSHa' je",
     "container.hopper": "\u00a77tomter",
-    "container.inventory": "\u00a77'aplo'Daq",
+    "container.inventory": "\u00a77buqmey",
     "container.lectern": "\u00a77paq raS",
     "container.loom": "\u00a77nIqmeH qal'aq",
     "container.repair": "\u00a77tI' 'ej pong",
-    "container.shulkerBox": "\u00a77ghachwI' DerlIq",
+    "container.shulkerBox": "\u00a77shulker ngaSwI'",
     "container.smoker": "\u00a77tlhIch vIncha'",
-    "container.stonecutter": "\u00a77nagh pe'meH raS",
-    "container.upgrade": "\u00a77Upgrade luch",
+    "container.stonecutter": "\u00a77nagh pe'wI'",
+    "container.upgrade": "\u00a77luch rach",
     "entity.minecraft.chest_minecart": "\u00a77DerlIq ghajbogh tlhIlHal Duj",
     "entity.minecraft.horse": "\u00a77Sargh",
-    "entity.minecraft.llama": "\u00a77HuD bolmaq'a'",
+    "entity.minecraft.llama": "\u00a77'ImtIy",
     "entity.minecraft.mule": "\u00a77qu'vatlh",
     "entity.minecraft.skeleton_horse": "\u00a77nobmeD Sargh",
     "entity.minecraft.villager": "\u00a77vengHom ghot",
-    "entity.minecraft.villager.armorer": "\u00a77chenmoHwI' may' Sut",
+    "entity.minecraft.villager.armorer": "\u00a77may' Sut chenmoHwI'",
     "entity.minecraft.villager.butcher": "\u00a77Ha'DIbaH HoHwI'",
     "entity.minecraft.villager.cartographer": "\u00a77pu'jIn chenmoHwI'",
     "entity.minecraft.villager.cleric": "\u00a77maqlegh",
@@ -64,23 +64,23 @@
     "entity.minecraft.wandering_trader": "\u00a77Suy lengbogh",
     "entity.minecraft.zombie_horse": "\u00a77yInbogh lom Sargh",
     "gui.advancements": "\u00a7fchavmey",
-    "itemGroup.brewing": "\u00a77HIq vutwI'",
-    "itemGroup.buildingBlocks": "\u00a77chenmoHmeH ngoghmey",
+    "itemGroup.brewing": "\u00a77taS",
+    "itemGroup.buildingBlocks": "\u00a77chenmoHmeH buq'Irmey",
     "itemGroup.combat": "\u00a77vIq",
-    "itemGroup.decorations": "\u00a77'IHmoHmeH ngoghmey",
+    "itemGroup.decorations": "\u00a77'IHmoHmeH buq'Irmey",
     "itemGroup.food": "\u00a77Soj",
-    "itemGroup.hotbar": "\u00a77Hotbars pol",
-    "itemGroup.inventory": "\u00a77taHmeH qengwI'",
+    "itemGroup.hotbar": "\u00a77qoghmey pollu'bogh",
+    "itemGroup.inventory": "\u00a77taHmeH lo' buqmey",
     "itemGroup.materials": "\u00a77chenmoHmeH Hap",
     "itemGroup.misc": "\u00a77Dochmey ngang",
-    "itemGroup.redstone": "\u00a77nagh Doq",
-    "itemGroup.search": "\u00a77DochmeyDaq nej",
+    "itemGroup.redstone": "\u00a77redstone",
+    "itemGroup.search": "\u00a77Doch nej",
     "itemGroup.tools": "\u00a77janmey",
-    "itemGroup.transportation": "\u00a77lupwI'",
+    "itemGroup.transportation": "\u00a77lupmeH Dochmey",
     "merchant.level.1": "\u00a77vumwI' Henbe'",
     "merchant.level.2": "\u00a77ghojwI'",
     "merchant.level.3": "\u00a77vumwI' Hen",
     "merchant.level.4": "\u00a77pIn",
     "merchant.level.5": "\u00a77pIn'a'",
-    "merchant.trades": "\u00a77mech"
+    "merchant.trades": "\u00a77Dochmey mechbogh"
 }
