--- a/assets/minecraft/lang/tt_ru.json
+++ b/assets/minecraft/lang/tt_ru.json
@@ -69,7 +69,7 @@
     "itemGroup.combat": "\u00a77\u041a\u043e\u0440\u0430\u043b \u04bb\u04d9\u043c \u043a\u0438\u0435\u043c\u043d\u04d9\u0440",
     "itemGroup.decorations": "\u00a77\u041c\u0430\u0442\u0443\u0440 \u0431\u043b\u043e\u043a\u043b\u0430\u0440",
     "itemGroup.food": "\u00a77\u0410\u0448\u043b\u0430\u0440",
-    "itemGroup.hotbar": "\u00a77\u0421\u0430\u043a\u043b\u0430\u043d\u0433\u0430\u043d \u043e\u044f\u0447\u044b\u043a\u043b\u0430\u0440",
+    "itemGroup.hotbar": "\u00a77\u0421\u0430\u043a\u043b\u0430\u043d\u0433\u0430\u043d \u043a\u043e\u0440\u0430\u043b\u043b\u0430\u0440",
     "itemGroup.inventory": "\u00a77\u042f\u0448\u04d9\u04af \u0438\u043d\u0432\u0435\u043d\u0442\u0430\u0440\u0435",
     "itemGroup.materials": "\u00a77\u041c\u0430\u0442\u0435\u0440\u0438\u0430\u043b\u043b\u0430\u0440",
     "itemGroup.misc": "\u00a77\u0422\u04e9\u0440\u043b\u0435",
