--- a/assets/minecraft/lang/uk_ua.json
+++ b/assets/minecraft/lang/uk_ua.json
@@ -28,7 +28,7 @@
     "container.dispenser": "\u00a77\u0420\u043e\u0437\u0434\u0430\u0432\u0430\u0447",
     "container.dropper": "\u00a77\u0412\u0438\u043a\u0438\u0434\u0430\u0447",
     "container.enchant": "\u00a77\u0417\u0430\u0447\u0430\u0440\u0443\u0432\u0430\u0442\u0438",
-    "container.enderchest": "\u00a77\u0415\u043d\u0434\u0435\u0440-\u0441\u043a\u0440\u0438\u043d\u044f",
+    "container.enderchest": "\u00a77\u0421\u043a\u0440\u0438\u043d\u044f \u0415\u043d\u0434\u0443",
     "container.furnace": "\u00a77\u041f\u0456\u0447",
     "container.grindstone_title": "\u00a77\u0420\u0435\u043c\u043e\u043d\u0442 \u0442\u0430 \u0437\u043d\u044f\u0442\u0442\u044f \u0447\u0430\u0440",
     "container.hopper": "\u00a77\u0412\u043e\u0440\u043e\u043d\u043a\u0430",
@@ -47,7 +47,7 @@
     "entity.minecraft.skeleton_horse": "\u00a77\u041a\u0456\u043d\u044c-\u0441\u043a\u0435\u043b\u0435\u0442",
     "entity.minecraft.villager": "\u00a77\u0421\u0435\u043b\u044f\u043d\u0438\u043d",
     "entity.minecraft.villager.armorer": "\u00a77\u041a\u043e\u0432\u0430\u043b\u044c \u043e\u0431\u043b\u0430\u0434\u0443\u043d\u043a\u0456\u0432",
-    "entity.minecraft.villager.butcher": "\u00a77\u041c'\u044f\u0441\u043d\u0438\u043a",
+    "entity.minecraft.villager.butcher": "\u00a77\u041c\u2019\u044f\u0441\u043d\u0438\u043a",
     "entity.minecraft.villager.cartographer": "\u00a77\u041a\u0430\u0440\u0442\u043e\u0433\u0440\u0430\u0444",
     "entity.minecraft.villager.cleric": "\u00a77\u0426\u0435\u0440\u043a\u043e\u0432\u043d\u0438\u043a",
     "entity.minecraft.villager.farmer": "\u00a77\u0424\u0435\u0440\u043c\u0435\u0440",
@@ -73,7 +73,7 @@
     "itemGroup.inventory": "\u00a77\u0406\u043d\u0432\u0435\u043d\u0442\u0430\u0440 \u0432\u0438\u0436\u0438\u0432\u0430\u043d\u043d\u044f",
     "itemGroup.materials": "\u00a77\u041c\u0430\u0442\u0435\u0440\u0456\u0430\u043b\u0438",
     "itemGroup.misc": "\u00a77\u0420\u0456\u0437\u043d\u0435",
-    "itemGroup.redstone": "\u00a77\u041c\u0435\u0445\u0430\u043d\u0456\u0437\u043c\u0438",
+    "itemGroup.redstone": "\u00a77\u0420\u0435\u0434\u0441\u0442\u043e\u0443\u043d",
     "itemGroup.search": "\u00a77\u041f\u043e\u0448\u0443\u043a",
     "itemGroup.tools": "\u00a77\u0406\u043d\u0441\u0442\u0440\u0443\u043c\u0435\u043d\u0442\u0438",
     "itemGroup.transportation": "\u00a77\u0422\u0440\u0430\u043d\u0441\u043f\u043e\u0440\u0442",
