:globe_with_meridians: Update lang files

--- a/assets/minecraft/lang/tok.json
+++ b/assets/minecraft/lang/tok.json
@@ -23,14 +23,14 @@
     "container.cartography_table": "\u00a77supa pi sitelen ma",
     "container.chest": "\u00a77poki",
     "container.chestDouble": "\u00a77poki suli",
-    "container.crafting": "\u00a77o pali",
+    "container.crafting": "\u00a77supa pali",
     "container.creative": "\u00a77o jo e ijo",
     "container.dispenser": "\u00a77poki pi pana wawa",
     "container.dropper": "\u00a77poki pana",
-    "container.enchant": "\u00a77o wawa",
+    "container.enchant": "\u00a77supa wawa",
     "container.enderchest": "\u00a77poki nasa",
     "container.furnace": "\u00a77poki seli",
-    "container.grindstone_title": "\u00a77o pona o weka e wawa",
+    "container.grindstone_title": "\u00a77kama pona ilo en weka wawa",
     "container.hopper": "\u00a77poki pi tawa ijo",
     "container.inventory": "\u00a77jo sina",
     "container.lectern": "\u00a77supa lipu",
